Update for Patch v3.4.2 - checksum: 7836

--- a/mod/thmod/localisation/english/immediate_tutorial_l_english.yml
+++ b/mod/thmod/localisation/english/immediate_tutorial_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- IMMEDIATE_TUTORIAL_PROMPT_TITLE:0 "Quick Start"
+ IMMEDIATE_TUTORIAL_PROMPT_TITLE:0 "เริ่มต้นอย่างเร็ว"
  IMMEDIATE_TUTORIAL_PROMPT_DESC:1 "We recommend you start by playing as United Nations of Earth to get the best first experience of Stellaris."
- NO_THANKS:0 "No Thanks"
- PLAY_NOW:0 "Play Now"
+ NO_THANKS:0 "ไม่เป็นไรขอบคุณ"
+ PLAY_NOW:0 "เล่นเลย"
