--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -59,6 +59,8 @@
  ACTION_OFFER_PEACE_VOTE_FAILED:0 "The §H[Actor.GetAllianceName]§! voted to reject sigining peace offer with §H[Recipient.GetName]§!."
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_TITLE:0 "Trade Deal Ended, We Lack Resources"
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_THEM_TITLE:0 "Trade Deal Ended, They Lack Resources"
+ MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION_TITLE:0 "Trade Deal Ended, Trade Action Not Valid"
+ MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION_THEM_TITLE:0 "Trade Deal Ended, Trade Action Not Valid"
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS_TITLE:0 "Trade Deal Ended, We closed our borders"
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS_THEM_TITLE:0 "Trade Deal Ended, They closed their borders"
  MESSAGE_TRADE_DEAL_END_GUARANTEE_ALLIANCE_TITLE:0 "Trade Deal Ended, We Entered An Alliance"
@@ -104,8 +106,8 @@
  ACTION_INVITE_TO_FEDERATION_PROPOSAL_FAILED_RECIPIENT:1 "คำเชิญให้เข้าร่วมเป็นพันธมิตรจาก §H[Actor.GetName]§! หมดเวลาแล้วและจะถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_ASK_FOR_FEDERATION_ASSOCIATION_PROPOSAL_FAILED_ACTOR:0 "คำขอของเราสำหรับสถานะการมีส่วนร่วมกับ §H[Recipient.GetAllianceName]§! ถูกปฏิเสธ"
  ACTION_ASK_FOR_FEDERATION_ASSOCIATION_PROPOSAL_FAILED_RECIPIENT:1 "คำขอจาก §H[Actor.GetName]§! สำหรับสถานะการมีส่วนร่วมกับ §H[Recipient.GetAllianceName]§! หมดเวลาแล้ว และถูกปฏิเสธโดยอัตโนมัติ"
- ACTION_DEMAND_VASSALIZATION_PROPOSAL_FAILED_ACTOR:0 "Our demand to vassalize §H[Recipient.GetName]§! was declined."
- ACTION_DEMAND_VASSALIZATION_PROPOSAL_FAILED_RECIPIENT:1 "ความต้องการให้มาเป็นบริวารจาก §H[Actor.GetName]§! หมดเวลาแล้ว และจะถูกปฏิเสธโดยอัตโนมัติ"
+ ACTION_DEMAND_SUBJUGATION_PROPOSAL_FAILED_ACTOR:0 "Our demand to subjugate §H[Recipient.GetName]§! was declined."
+ ACTION_DEMAND_SUBJUGATION_PROPOSAL_FAILED_RECIPIENT:0 "The demand of subjugation from §H[Actor.GetName]§! timed out and was auto-declined."
  ACTION_DEMAND_SUBSIDIARY_PROPOSAL_FAILED_ACTOR:0 "Our takeover demand for §H[Recipient.GetName]§! to become our subsidiary was declined."
  ACTION_DEMAND_SUBSIDIARY_PROPOSAL_FAILED_RECIPIENT:0 "The takeover demand from §H[Actor.GetName]§! timed out and was auto-declined."
  ACTION_DEMAND_PROTECTORATE_PROPOSAL_FAILED_ACTOR:0 "Our offer to give Protectorate status to §H[Recipient.GetName]§! was declined."
@@ -120,23 +122,9 @@
  ACTION_DEMAND_SIGNATORY_PROPOSAL_FAILED_RECIPIENT:1 "The offer of Signatory status from §H[Actor.GetName]§! timed out and was auto-declined."
  ACTION_DEMAND_SATELLITE_PROPOSAL_FAILED_ACTOR:0 "Our offer to give Satellite status to §H[Recipient.GetName]§! was declined."
  ACTION_DEMAND_SATELLITE_PROPOSAL_FAILED_RECIPIENT:1 "The offer of Satellite status from §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_VASSALIZED_PROPOSAL_FAILED_ACTOR:0 "Our request to become vassalized by §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_VASSALIZED_PROPOSAL_FAILED_RECIPIENT:1 "The request to become vassalized from §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_PROTECTORATE_PROPOSAL_FAILED_ACTOR:0 "คำขอของเราที่จะเป็นจักรวรรดิในอารักขาของ §H[Recipient.GetName]§! ถูกปฏิเสธ"
- ACTION_ASK_TO_BECOME_PROTECTORATE_PROPOSAL_FAILED_RECIPIENT:1 "คำขอเป็นจักรวรรดิในอารักขาของ §H[Actor.GetName]§! หมดเวลาแล้ว และถูกปฏิเสธโดยอัตโนมัติ"
- ACTION_ASK_TO_BECOME_TRIBUTARY_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Tributary of §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_TRIBUTARY_PROPOSAL_FAILED_RECIPIENT:1 "The request to become a Tributary of §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_THRALL_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Thrall of §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_THRALL_PROPOSAL_FAILED_RECIPIENT:1 "The request to become a Thrall of §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_DOMINION_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Dominion of §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_DOMINION_PROPOSAL_FAILED_RECIPIENT:1 "The request to become a Dominion of §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_SATELLITE_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Satellite of §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_SATELLITE_PROPOSAL_FAILED_RECIPIENT:1 "The request to become a Satellite of §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_SIGNATORY_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Signatory of §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_SIGNATORY_PROPOSAL_FAILED_RECIPIENT:1 "The request to become a Signatory of §H[Actor.GetName]§!'s galactic peace treaty timed out and was auto-declined."
- ACTION_ASK_TO_BECOME_SUBSIDIARY_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Subsidiary of §H[Recipient.GetName]§! was declined."
- ACTION_ASK_TO_BECOME_SUBSIDIARY_PROPOSAL_FAILED_RECIPIENT:0 "The request to become a Subsidiary of §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_ASK_TO_BE_RELEASED_SUBJECT_PROPOSAL_FAILED_ACTOR:0 "Our request to be released from subjugation of §H[Recipient.GetName]§!'s galactic peace treaty was declined."
+ ACTION_ASK_TO_BECOME_SUBJUGATED_PROPOSAL_FAILED_ACTOR:0 "Our request to become a Subject of the §H[Recipient.GetName]§! was declined."
+ ACTION_ASK_TO_BECOME_SUBJUGATED_PROPOSAL_FAILED_RECIPIENT:0 "The request to become subjugated from §H[Actor.GetName]§! timed out and was auto-declined."
+ ACTION_ASK_TO_BE_RELEASED_SUBJECT_PROPOSAL_FAILED_ACTOR:1 "Our request to be released from subjugation by the §H[Recipient.GetName]§! galactic peace treaty was declined."
  ACTION_ASK_TO_BE_RELEASED_SUBJECT_PROPOSAL_FAILED_RECIPIENT:1 "The request to be released from subjugation of §H[Actor.GetName]§! timed out and was auto-declined."
  ACTION_ASK_TO_JOIN_FEDERATION_PROPOSAL_FAILED_ACTOR:0 "Our request to join the §H[Recipient.GetAllianceName]§! was declined."
  ACTION_ASK_TO_JOIN_FEDERATION_PROPOSAL_FAILED_ALLIANCE:0 "The request of §H[Actor.GetName]§! to join §H[Recipient.GetAllianceName]§! was declined."
@@ -160,22 +148,8 @@
  MESSAGE_LEAVE_ALLIANCE_TITLE:0 "Alliance Member Left"
  DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "The $COUNTRY|Y$ has left the $ALLIANCE|Y$"
  DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "The $COUNTRY|Y$ has left the $ALLIANCE|Y$"
- MESSAGE_DEMAND_VASSALIZATION_TITLE:0 "ต้องการให้มาเป็นบริวาร"
- MESSAGE_DEMAND_PROTECTORATE_TITLE:0 "เสนอสถานะจักรวรรดิในอารักขา"
- MESSAGE_DEMAND_SUBSIDIARY_TITLE:0 "เสนอสถานะบริษัทย่อย"
- MESSAGE_DEMAND_TRIBUTARY_TITLE:0 "Tribute Demand"
- MESSAGE_DEMAND_THRALL_TITLE:0 "Thralldom Demand"
- MESSAGE_DEMAND_DOMINION_TITLE:0 "Offer Dominion Status"
- MESSAGE_DEMAND_SATELLITE_TITLE:0 "Offer Satellite Status"
- MESSAGE_DEMAND_SIGNATORY_TITLE:0 "Offer Signatory Status"
- MESSAGE_ASK_TO_BECOME_VASSALIZED_TITLE:0 "Vassalization Request"
- MESSAGE_ASK_TO_BECOME_PROTECTORATE_TITLE:0 "คำขอการคุ้มครอง (จักรวรรดิในอารักขา)"
- MESSAGE_ASK_TO_BECOME_TRIBUTARY_TITLE:0 "Tribute Offer"
- MESSAGE_ASK_TO_BECOME_THRALL_TITLE:0 "Thralldom Offer"
- MESSAGE_ASK_TO_BECOME_DOMINION_TITLE:0 "Dominion Request"
- MESSAGE_ASK_TO_BECOME_SATELLITE_TITLE:0 "Satellite Request"
- MESSAGE_ASK_TO_BECOME_SIGNATORY_TITLE:0 "คำขอลงนามเซ็นสัญญา"
- MESSAGE_ASK_TO_BECOME_SUBSIDIARY_TITLE:0 "คำขอเป็นบริษัทย่อย"
+ MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "Demand Subjugation"
+ MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "Subjugation Request"
  MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "Subject Release Request"
  MESSAGE_FORM_FEDERATION_TITLE:0 "คำขอจัดตั้งสหพันธ์"
  MESSAGE_INVITE_TO_FEDERATION_TITLE:0 "Federation Invitation"
@@ -215,22 +189,8 @@
  ACTION_OFFER_PEACE_NOTIFICATION:1 "§H[From.GetName]§! ทำข้อตกลงสงบศึกกับ §H[Root.GetName]§!"
  ACTION_INVITE_TO_ALLIANCE_NOTIFICATION:2 "§H[Root.GetName]§! joined the §H[From.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
  ACTION_LEAVE_ALLIANCE_NOTIFICATION:2 "§H[From.GetName]§! left the §H[From.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
- ACTION_DEMAND_VASSALIZATION_NOTIFICATION:2 "§H[From.GetName]§! vassalized §H[Root.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
- ACTION_ASK_TO_BECOME_VASSALIZED_NOTIFICATION:2 "§H[Root.GetName]§! vassalized §H[From.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
- ACTION_DEMAND_PROTECTORATE_NOTIFICATION:2 "§H[From.GetName]§! ต้องการเป็นจักรวรรดิในอารักขาของ §H[Root.GetName]§!\n\nพวกเขายอมสละอิสรภาพเพื่อแลกกับความปลอดภัย"
- ACTION_DEMAND_TRIBUTARY_NOTIFICATION:2 "§H[From.GetName]§! made a Tributary out of §H[Root.GetName]§!.\n\nThey will now pay a share of their income in exchange for safety."
- ACTION_DEMAND_THRALL_NOTIFICATION:2 "§H[From.GetName]§! made a Thrall out of §H[Root.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
- ACTION_DEMAND_DOMINION_NOTIFICATION:2 "§H[From.GetName]§! made a Dominion out of §H[Root.GetName]§!.\n\nThey have given up their spiritual independence in exchange for safety."
- ACTION_DEMAND_SIGNATORY_NOTIFICATION:2 "§H[From.GetName]§! had §H[Root.GetName]§! sign their galactic peace treaty.\n\nThey have given up their diplomatic independence in exchange for safety."
- ACTION_DEMAND_SATELLITE_NOTIFICATION:2 "§H[From.GetName]§! made a Satellite out of §H[Root.GetName]§!.\n\nThey have given up their technological independence in exchange for safety."
- ACTION_DEMAND_SUBSIDIARY_NOTIFICATION:0 "§H[From.GetName]§! made a Subsidiary out of §H[Root.GetName]§!.\n\nThey have become a corporate asset in exchange for safety."
- ACTION_ASK_TO_BECOME_PROTECTORATE_NOTIFICATION:2 "§H[Root.GetName]§! ต้องการเป็นจักรวรรดิในอารักขาของ §H[From.GetName]§!\n\nพวกเขายอมสละอิสรภาพเพื่อแลกกับความปลอดภัย"
- ACTION_ASK_TO_BECOME_TRIBUTARY_NOTIFICATION:2 "§H[Root.GetName]§! made a Tributary out of §H[From.GetName]§!.\n\nThey will now pay a share of their income in exchange for safety."
- ACTION_ASK_TO_BECOME_THRALL_NOTIFICATION:2 "§H[Root.GetName]§! made a Thrall out of §H[From.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
- ACTION_ASK_TO_BECOME_DOMINION_NOTIFICATION:2 "§H[Root.GetName]§! made a Dominion out of §H[From.GetName]§!.\n\nThey have given up their spiritual independence in exchange for safety."
- ACTION_ASK_TO_BECOME_SIGNATORY_NOTIFICATION:2 "§H[Root.GetName]§! had §H[From.GetName]§! sign their galactic peace treaty.\n\nThey have given up their diplomatic independence in exchange for safety."
- ACTION_ASK_TO_BECOME_SATELLITE_NOTIFICATION:2 "§H[Root.GetName]§! made a Satellite out of §H[From.GetName]§!.\n\nThey have given up their technological independence in exchange for safety."
- ACTION_ASK_TO_BECOME_SUBSIDIARY_NOTIFICATION:0 "§H[Root.GetName]§! made a Subsidiary out of §H[From.GetName]§!.\n\nThey have become a corporate asset in exchange for safety."
+ ACTION_DEMAND_VASSALIZATION_NOTIFICATION:3 "§H[From.GetName]§! subjugated §H[Root.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
+ ACTION_ASK_TO_BECOME_VASSALIZED_NOTIFICATION:3 "§H[Root.GetName]§! subjugated §H[From.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
  ACTION_FORM_FEDERATION_NOTIFICATION:2 "§H[From.GetAllianceName]§! voted to a form a $FEDERATION$.\n\nThey have chosen to go into the galaxy together as one."
  ACTION_INVITE_TO_FEDERATION_NOTIFICATION:2 "§H[Root.GetName]§! joined the §H[From.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
  ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! joined the §H[Root.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
@@ -297,16 +257,16 @@
  MESSAGE_OFFENSIVE_PACT_DECLARED_WAR:0 "เข้าร่วมสงครามรุกราน"
  MESSAGE_OFFENSIVE_PACT_DECLARED_WAR_DESC:1 "$CALLER|Y$, who we agreed to support in their offensive war, has declared war on $DEFENDER|Y$!"
  MESSAGE_WAR_ENDED:0 "สงครามสิ้นสุดลง"
- MESSAGE_WAR_ENDED_DESC_1:1 "The war between $ATTACKER|Y$ and $DEFENDER|Y$ has ended due to $DEFENDER|Y$ being vassalized or annexed by a third party."
- MESSAGE_WAR_ENDED_DESC_2:2 "Our war with $ENEMY|Y$ has ended due to them being vassalized or annexed by $OVERLORD|Y$. We have not entered a truce."
- MESSAGE_WAR_ENDED_DESC_3:1 "We have left the war against $ENEMY|Y$ due to being vassalized by $OVERLORD|Y$."
+ MESSAGE_WAR_ENDED_DESC_1:2 "The war between $ATTACKER|Y$ and $DEFENDER|Y$ has ended due to $DEFENDER|Y$ being subjugated or annexed by a third party."
+ MESSAGE_WAR_ENDED_DESC_2:3 "Our war with $ENEMY|Y$ has ended due to them being subjugated or annexed by $OVERLORD|Y$. We have not entered a truce."
+ MESSAGE_WAR_ENDED_DESC_3:2 "We have left the war against $ENEMY|Y$ due to being subjugated by $OVERLORD|Y$."
  MESSAGE_VASSAL_ENTER_WAR:0 "Subject Enters War"
  MESSAGE_VASSAL_ENTER_WAR_DESC_1:1 "$VASSAL|Y$, the vassal of one of our allies has entered the war against $ENEMY|Y$."
  MESSAGE_VASSAL_ENTER_WAR_DESC_2:1 "Our vassal, $VASSAL|Y$, has entered the war against $ENEMY|Y$."
  MESSAGE_ENEMY_VASSAL_ENTER_WAR:0 "Enemy Subject Enters War"
  MESSAGE_ENEMY_VASSAL_ENTER_WAR_DESC:1 "$ENEMY|Y$, the subject of one of our enemies has entered the war against us."
  MESSAGE_ENEMY_LEAVES_WAR:0 "Enemy Leaves War"
- MESSAGE_ENEMY_LEAVES_WAR_DESC:2 "$ENEMY|Y$ has left the war due to being vassalized or annexed by $OVERLORD|Y$."
+ MESSAGE_ENEMY_LEAVES_WAR_DESC:3 "$ENEMY|Y$ has left the war due to being subjugated or annexed by $OVERLORD|Y$."
  MESSAGE_FLEET_DETECTED_WE:0 "§H$FLEET$§! จาก $WHO|Y$ ถูกตรวจพบในเส้นทางที่ตรงไปยัง §Yระบบดาว $TARGET$§!!"
  MESSAGE_FLEET_DETECTED_MESSAGE_TYPE_TITLE:0 "ตรวจพบกองยาน"
  MESSAGE_OBJECT_DETECTED_WE:0 "An unidentified object has been detected on a direct course towards the §Y$TARGET$ System§!!"
@@ -367,12 +327,15 @@
  MESSAGE_TRADE_DEAL_END_NO_ENERGY_THEM:0 "$WITH|Y$ has ended our trade treaty because they lack the Energy Credits to maintain it."
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE:0 "Our trade treaty with $WITH|Y$ has ended because we lack the $RESOURCE|Y$ to maintain it."
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_THEM:0 "$WITH|Y$ has ended our trade treaty because they lack the $RESOURCE|Y$ to maintain it."
+ MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION:0 "Our trade treaty with $WITH|Y$ has ended because our Trade Action $ACTION|Y$ is no longer valid."
+ MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION_THEM:0 "$WITH|Y$ has ended our trade treaty because their Trade Action $ACTION|Y$ is no longer valid."
  MESSAGE_TRADE_DEAL_TITLE:0 "ข้อตกลงการค้า"
  MESSAGE_TRADE_DEAL_END_TIMEOUT:2 "Our trade treaty with $WITH|Y$ has timed out.\n\nWe traded:\n$OUR_OFFER$\n\nThey traded:\n$THEIR_OFFER$"
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS:0 "Our trade treaty with $WITH|Y$ has ended as we have closed our borders to them."
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS_THEM:0 "Our trade treaty with $WITH|Y$ has ended as they have closed borders their borders to us."
  MESSAGE_TRADE_DEAL_END_SUBJECT_ACCESS:0 "Our trade treaty with $WITH|Y$ has ended as we have become subjects which no longer control our access."
  MESSAGE_TRADE_DEAL_END_SUBJECT_ACCESS_THEM:0 "Our trade treaty with $WITH|Y$ has ended as they have become subjects which no longer control their access."
+ MESSAGE_TRADE_DEAL_END_CANCELED_FLEET: "Our trade deal with $WITH|Y$ has ended because the subjugation agreement was canceled.\n\nWe traded:\n$OUR_OFFER$\n\nThey traded:\n$THEIR_OFFER$"
  MESSAGE_TRADE_DEAL_END_GUARANTEE_ALLIANCE:0 "Our guarantee trade treaty with $WITH|Y$ has ended because we joined an alliance."
  MESSAGE_TRADE_DEAL_END_GUARANTEE_ALLIANCE_THEM:0 "$WITH|Y$ has ended our guarantee trade treaty because they joined an alliance."
  MESSAGE_TRADE_DEAL_END_SUPPORT_INDEPENDENCE_VASSALAGE:1 "Our trade treaty with $WITH|Y$ has ended because we have become subjects and can no longer support their independence."
@@ -396,8 +359,8 @@
  MESSAGE_LOST_ARMY:0 "$NUMBER$. $NAME|R$"
  MESSAGE_SUBJECT_TYPE_CHANGED_TITLE:0 "เปลี่ยนสถานะของบริวารแล้ว"
  MESSAGE_SUBJECT_CHANGED_DESC:0 "$REASON$$SUBJECT|Y$ ตอนนี้คือ $NEW_TYPE|Y$ ภายใต้ $OVERLORD|Y$"
- MESSAGE_SUBJECT_CHANGE_REASON_protectorate_me:0 "Due to our advances in technology, "
- MESSAGE_SUBJECT_CHANGE_REASON_protectorate:0 "Due to their advances in technology, "
+ MESSAGE_SUBJECT_CHANGE_REASON_preset_protectorate_me:0 "Due to our advances in technology, "
+ MESSAGE_SUBJECT_CHANGE_REASON_preset_protectorate:0 "Due to their advances in technology, "
  MESSAGE_TRIGG_MOD_LOST_TITLE:0 "Conditional Effect Lost"
  TRIGG_MOD_LOST:1 "The Conditional Effect '$NAME|H$' is no longer active."
  MESSAGE_TRIGG_MOD_GAINED_TITLE:0 "Conditional Effect Gained"
