--- a/mod/thmod/localisation/english/event_chains_l_english.yml
+++ b/mod/thmod/localisation/english/event_chains_l_english.yml
@@ -6,7 +6,7 @@
  test_counter:0 "Test counter"
  migrating_forests_chain_title:0 "Migrating Forests on [Root.GetName]"
  migrating_forests_chain_desc:0 "The migrating forests on [Root.GetName] are interfering with the development of our colony. A solution to this problem must be found if we are to prosper on this world."
- subterranean_civilization_chain_title:0 "Subterranean Civilization"
+ subterranean_civilization_chain_title:1 "[Root.owner.GetSubMantleUpper] Civilization"
  subterranean_civilization_chain_desc:0 "An underground alien civilization on [Root.GetName] is tunneling towards our colony on the surface. Their numbers and intentions are unknown to us, and they could be a significant threat."
  abandoned_terraforming_chain_title:0 "Abandoned Terraforming Project"
  abandoned_terraforming_chain_desc:0 "[Root.GetName] was partly terraformed by someone thousands of years ago, but the process was interrupted for unknown reasons. The result is a highly unstable climate system and biosphere. We have located the abandoned terraforming equipment, and must decide what should be done with it."
@@ -66,6 +66,8 @@
  hunting_hyacinth_desc:0 "The Hyacinth, a sister ship to the ark ship that brought our ancestors to [Root.Capital.GetName], was meant to follow us here from Earth a century ago. We must find out what became of her."
  nomads_observation_chain_title:0 "Unusual Spacefarers"
  nomads_observation_chain_desc:1 "We have detected that the odd aliens, whose communication we cannot tap into, have appeared within our borders. Since it's impossible for us to translate their language we can only wait and see who they are and what they want."
+ shrouded_ship_chain_title:0 "Shrouded"
+ shrouded_ship_chain_desc:0 "One of our vessels has been lost to the Shroud."
  hijacked_cult_fleet_poi:0 "Cultist Fleet"
  hijacked_cult_fleet_poi_desc:0 "The cultists have managed to build a small fleet of starships at a secret facility on [Root.Capital.GetName]. Upon discovery, the cultists fled in their ships to [hijacked_fleet_planet.GetName]. They must be destroyed before they can cause any more damage!"
  cultist_search_1_poi:1 "ค้นหา [cultists_1.GetName]"
