--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -84,6 +84,7 @@
  MOD_COUNTRY_SUBJECT_INTEGRATION_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการรวมเข้ากับบริวาร"
  MOD_COUNTRY_SUBJECT_INFLUENCE_GAIN_MULT:0 "อิทธิพลจากบริวาร"
  MOD_COUNTRY_SUBJECT_ACCEPTANCE_ADD:0 "Subjugation Acceptance"
+ MOD_MONTHLY_LOYALTY_GAIN:0 "Monthly Loyalty Change"
  MOD_COUNTRY_FACTION_INFLUENCE_MULT:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  MOD_COUNTRY_FACTION_INFLUENCE_ADD:0 "อิทธิพลสูงสุดที่ได้จากกลุ่มการเมือง"
  MOD_COUNTRY_CLEAR_BLOCKER_COST_MULT:0 "ค่าใช้จ่ายในการเคลียร์สิ่งกีดขวาง"
@@ -98,6 +99,7 @@
  MOD_COUNTRY_CLAIM_DISTANCE_MULT:0 "ระยะทางการอ้างสิทธิ์"
  MOD_COUNTRY_GOVERNMENT_CIVIC_POINTS_ADD:0 "ช่องพลเมือง"
  MOD_COUNTRY_STARBASE_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในฐานอวกาศ"
+ MOD_COUNTRY_STARBASE_INFLUENCE_COST_DISTANCE_MULT:0 "Starbase Influence Distance Cost"
  MOD_COUNTRY_TRADE_FEE:0 "ค่าธรรมเนียมตลาด"
  MOD_COUNTRY_SLAVE_MARKET_COST_MULT:0 "ค่าใช้จ่ายตลาดค้าทาส"
  MOD_COUNTRY_MEGASTRUCTURE_BUILD_CAP_ADD:0 "ความจุของการสร้างสิ่งก่อสร้างขนาดใหญ่"
@@ -139,6 +141,10 @@
  MOD_POP_ROBOT_BUILD_SPEED_MULT:0 "ความเร็วในการสร้างหุ่นยนต์"
  MOD_POP_ROBOT_BUILD_SPEED_MULT_DESC:0 "Affects the speed at which robotic Pops are built."
  MOD_POP_ROBOT_BUILD_COST_MULT:0 "ค่าใช้จ่ายในการสร้างหุ่นยนต์"
+ mod_pop_job_trade_mult:0 "£trade_value£ Trade Value from £job£ Jobs"
+ mod_pop_lifestyle_trade_mult:0 "£trade_value£ Trade Value from Living Standards"
+ mod_pop_job_amenities_mult:0 "£amenities£ Amenities from £job£ Jobs"
+ mod_job_soldier_stability_add:0 "Stability from £job_soldier£ [GetSoldier] Jobs"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
  MOD_COUNTRY_HOSTILE_CLAIM_INFLUENCE_COST_MULT:0 "Hostile Claim Influence Cost"
@@ -172,7 +178,7 @@
  MOD_PLANET_POP_ASSEMBLY_REDUCTION:1 "การลดความเร็วในการประกอบประชากรเครื่องจักร"
  MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD:0 "ประชากรสิ่งมีชีวิตรายเดือน"
  MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT:0 "Organic Pop Assembly Speed"
- MOD_PLANET_POP_ASSEMBLY_ORGANIC_REDUCTION:0 "Pop Organic Assembly Speed Reduction"
+ MOD_PLANET_POP_ASSEMBLY_ORGANIC_REDUCTION:1 "Organic Pop Assembly Speed Reduction"
  MOD_PLANET_MIGRATION_ALL_MULT:0 "การย้ายถิ่นฐานทั้งหมด"
  MOD_POP_DECLINE_FROM_EMIGRATION:0 "ประชากรปฏิเสธจากการอพยพย้ายออก"
  MOD_POP_GROWTH_FROM_IMMIGRATION:0 "เพิ่มประชากรจากการอพยพย้ายเข้า"
@@ -182,6 +188,8 @@
  MOD_PLANET_IMMIGRATION_PULL_MULT:0 "$MOD_PLANET_IMMIGRATION_PULL_ADD$"
  MOD_PLANET_EMIGRATION_PUSH_ADD:0 "ผลักดันการอพยพย้ายออก"
  MOD_PLANET_EMIGRATION_PUSH_MULT:0 "$MOD_PLANET_EMIGRATION_PUSH_ADD$"
+ MOD_PLANET_RESETTLEMENT_UNEMPLOYED_DESTINATION_MULT:0 "Automatic Resettlement Destination Chance"
+ MOD_PLANET_RESETTLEMENT_UNEMPLOYED_DESTINATION_MULT_DESC:0 "This value increases the chance unemployed £pop£ Pops within your empire will spontaneously migrate to this particular colony, so long as it has jobs, housing, and decent habitability."
  MOD_PLANET_RESETTLEMENT_UNEMPLOYED_MULT:0 "โอกาสในการไปตั้งรกรากใหม่โดยอัตโนมัติ"
  MOD_PLANET_RESETTLEMENT_UNEMPLOYED_MULT_DESC:0 "This value increases the chance unemployed £pop£ Pops will spontaneously migrate to other colonies within your empire with jobs, housing, and decent habitability."
  MOD_POP_DECLINE_SPEED:0 "เร็วในการลดลงของประชากร"
@@ -283,6 +291,10 @@
  MOD_SHIP_STARTING_EXPERIENCE_ADD:0 "ค่าประสบการณ์การยานเริ่มต้น"
  MOD_SHIP_EXPERIENCE_GAIN_MULT:0 "ได้ค่าประสบการณ์การยาน"
  MOD_SHIP_JUMPDRIVE_COOLDOWN_MULT:0 "เวลาคูลดาวน์การขับเคลื่อนแบบจั้มไดร์ฟ"
+ MOD_SHIP_NAVAL_CAP_USAGE_ADD:0 "Naval Cap Usage"
+ MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
+ MOD_SHIP_REPAIR_HULL_MULT:0 "Docked Ship Hull Repair Speed"
+ MOD_SHIP_REPAIR_ARMOR_MULT:0 "Docked Ship Armor Repair Speed"
  MOD_ARMY_DISENGAGE_CHANCE_MULT:0 "โอกาสในการหลุดรอดของทหารราบ"
  MOD_ARMY_UPKEEP_MULT:0 "การบำรุงกองทัพ"
  MOD_ARMY_UPKEEP_MULT_DESC:1 "Affects the upkeep cost of all active armies within the Empire, increasing or reducing the monthly cost of keeping them in service."
@@ -331,6 +343,7 @@
  MOD_PLANET_CRIME_NO_HAPPINESS_ADD:0 "ความเบี่ยงเบน"
  MOD_PLANET_CRIME_NO_HAPPINESS_MULT:0 "$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$"
  MOD_PLANET_STABILITY_ADD:0 "เสถียรภาพ"
+ mod_habitat_stability_add:0 "Stability on Habitats"
  MOD_PLANET_STABILITY_MULT:0 "$MOD_PLANET_STABILITY_ADD$"
  MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE:1 "พลังโจมตีจากการทิ้งระเบิดจากวงโคจร"
  MOD_SHIP_ORBITAL_BOMBARDMENT_MULT:0 "$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$"
@@ -363,6 +376,7 @@
  mod_planet_structures_upkeep_mult:0 "ค่าบำรุงรักษาเขตและสิ่งปลูกสร้าง"
  mod_planet_buildings_cost_mult:0 "ค่าสิ่งปลูกสร้าง"
  mod_planet_buildings_upkeep_mult:0 "ค่าบำรุงรักษาสิ่งปลูกสร้าง"
+ mod_planet_buildings_energy_upkeep_mult:0 "Building £energy£ Energy Upkeep"
  mod_planet_districts_cost_mult:0 "ค่าใช้จ่ายเขต"
  mod_planet_districts_upkeep_mult:0 "ค่าบำรุงรักษาเขต"
  mod_planet_districts_cities_upkeep_mult:0 "ค่าบำรุงรักษาเขตเมือง"
@@ -476,6 +490,8 @@
  MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_ADD$"
  MOD_COUNTRY_STARBASE_CAPACITY_ADD:0 "$STARBASE_CAPACITY_TITLE$"
  MOD_COUNTRY_STARBASE_CAPACITY_MULT:0 "$STARBASE_CAPACITY_TITLE$"
+ MOD_COUNTRY_ENCLAVE_CAPACITY_ADD:0 "Mercenary Enclave Capacity"
+ MOD_COUNTRY_ENCLAVE_CAPACITY_MULT:0 "Mercenary Enclave Capacity"
  MOD_STARBASE_TRADE_COLLECTION_RANGE_ADD:2 "ระยะการเก็บรวบรวม"
  MOD_STARBASE_TRADE_PROTECTION_RANGE_ADD:2 "ระยะการป้องกัน"
  MOD_STARBASE_TRADE_PROTECTION_ADD:0 "การคุ้มครองการค้า"
@@ -567,8 +583,8 @@
  mod_country_traditions_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ruler_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ethic_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
- mod_country_power_projection_influence_produces_add:0 "$country_power_projection$"
- mod_country_power_projection_influence_produces_mult:0 "$country_power_projection$"
+ mod_country_power_projection_influence_produces_add:1 "Max £influence£ $influence$ from $country_power_projection$"
+ mod_country_power_projection_influence_produces_mult:1 "£influence£ $influence$ from $country_power_projection$"
  mod_pop_ethic_pacifist_attraction_mult:0 "การดึงดูดจริยธรรมที่รักสันติ"
  mod_pop_ethic_militarist_attraction_mult:0 "การดึงดูดจริยธรรมที่ชอบสงคราม"
  mod_pop_ethic_materialist_attraction_mult:0 "การดึงดูดจริยธรรมวัตถุนิยม"
@@ -874,6 +890,12 @@
  mod_pc_alpine_habitability:0 "การอยู่อาศัยได้ในโลกที่มีเทือกเขาสูง"
  mod_pc_habitat_habitability:0 "การอยู่อาศัยได้ในที่อยู่อาศัยในอวกาศ"
  mod_pc_shattered_ring_habitable_habitability:0 "Shattered Ring Habitability"
+ MOD_HABITABILITY_FLOOR:0 "Species Minimum Habitability"
+ MOD_HABITABILITY_CEIL:0 "Species Habitability Cap"
+ MOD_HABITABILITY_FLOOR_ADD:0 "$MOD_HABITABILITY_FLOOR$"
+ MOD_HABITABILITY_FLOOR_MULT:0 "$MOD_HABITABILITY_FLOOR$"
+ MOD_HABITABILITY_CEIL_ADD:0 "$MOD_HABITABILITY_CEIL$"
+ MOD_HABITABILITY_CEIL_MULT:0 "$MOD_HABITABILITY_CEIL$"
  tm_semi_static_we_defensive:0 "กำลังจะแพ้สงครามป้องกัน"
  tm_semi_static_we_defensive_desc:0 "In accordance with our §ESemi-Static§! War Economy Policy, our valiant citizens have started to make sacrifices in our desperate defense against the alien aggressors."
  tm_semi_static_we_offensive:0 "กำลังจะชนะสงครามรุกราน"
@@ -913,20 +935,20 @@
  triggered_opinion_both_machine_intelligence:0 "Fellow Machine Intelligence"
  triggered_dc_opinion_of_servitors:0 "Oppressors"
  triggered_dc_opinion_of_assimilators:0 "$triggered_dc_opinion_of_servitors$"
- opinion_xenophobia:0 "กลัวต่างดาว"
- opinion_xenophobes:0 "กลัวต่างดาวที่ดื้อรั้น"
- opinion_xenophilia:0 "ชื่นชอบชาวต่างดาว"
- opinion_xenophiles:0 "ชอบทำการทูตกับต่างดาว"
- opinion_xenophage:0 "Xenophages"
+ triggered_opinion_xenophobia:0 "Xenophobia"
+ triggered_opinion_xenophobes:0 "Xenophobic Bigots"
+ triggered_opinion_xenophilia:0 "Xenophilia"
+ triggered_opinion_xenophiles:0 "Xenophile Diplomacy"
+ triggered_opinion_xenophage:0 "Xenophages"
  opinion_biophage:0 "Biophages"
- opinion_of_materialist:0 "วัตถุนิยมหน้าโง่"
- opinion_of_materialist_pos:0 "วัตถุนิยมชาญฉลาด"
- opinion_of_spiritualist:0 "จิตวิญญาณนิยมหน้าโง่"
- opinion_of_spiritualist_pos:0 "จิตวิญญาณนิยมชาญฉลาด"
- opinion_of_egalitarian_pos:0 "Free Egalitarianists"
- opinion_of_pacifist_pos:0 "Enlightened Pacifists"
- opinion_of_egalitarian:1 "Egalitarian Rabble"
- opinion_of_authoritarian:1 "Authoritarian Tyrants"
+ triggered_opinion_of_materialist:0 "Materialist Fools"
+ triggered_opinion_of_materialist_pos:0 "Bright Materialists"
+ triggered_opinion_of_spiritualist:0 "Spiritualist Fools"
+ triggered_opinion_of_spiritualist_pos:0 "Wise Spiritualists"
+ triggered_opinion_of_egalitarian_pos:0 "Free Egalitarianists"
+ triggered_opinion_of_pacifist_pos:0 "Enlightened Pacifists"
+ triggered_opinion_of_egalitarian:1 "Egalitarian Rabble"
+ triggered_opinion_of_authoritarian:1 "Authoritarian Tyrants"
  opinion_from_personality:0 "บุคลิกภาพ [Root.GetPersonalityName]"
  opinion_desecrated_holy_world:0 "ดาวเคราะห์ศักดิ์สิทธิ์ที่ถูกทอดทิ้ง"
  opinion_desecrated_tomb_world:0 "โลกแห่งความตายที่ถูกทอดทิ้ง"
@@ -1367,6 +1389,20 @@
  mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในโลกเครื่องจักร"
  mod_pc_hive_habitability:0 "การอยู่อาศัยได้ในโลกที่เป็นรัง"
  MOD_POSTFIX_PERCENT:0 "§G%§!"
+ SPECIES_TRAIT_PICKS:0 "Species Trait Picks"
+ mod_BIOLOGICAL_species_trait_picks_add:0 "Organic $SPECIES_TRAIT_PICKS$"
+ mod_MECHANICAL_species_trait_picks_add:0 "Mechanical $SPECIES_TRAIT_PICKS$"
+ mod_MACHINE_species_trait_picks_add:0 "Machine $SPECIES_TRAIT_PICKS$"
+ mod_HUM_species_trait_picks_add:0 "Humanoid $SPECIES_TRAIT_PICKS$"
+ mod_MAM_species_trait_picks_add:0 "Mammalian $SPECIES_TRAIT_PICKS$"
+ mod_REP_species_trait_picks_add:0 "Reptilian $SPECIES_TRAIT_PICKS$"
+ mod_AVI_species_trait_picks_add:0 "Avian $SPECIES_TRAIT_PICKS$"
+ mod_ART_species_trait_picks_add:0 "Arthropoid $SPECIES_TRAIT_PICKS$"
+ mod_MOL_species_trait_picks_add:0 "Molluscoid $SPECIES_TRAIT_PICKS$"
+ mod_FUN_species_trait_picks_add:0 "Fungoid $SPECIES_TRAIT_PICKS$"
+ mod_PLANT_species_trait_picks_add:0 "Plantoid $SPECIES_TRAIT_PICKS$"
+ mod_LITHOID_species_trait_picks_add:0 "Lithoid $SPECIES_TRAIT_PICKS$"
+ mod_AQUATIC_species_trait_picks_add:0 "Aquatic $SPECIES_TRAIT_PICKS$"
  MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซนเซอร์ของจักรวรรดิ"
  MOD_SHIP_SENSOR_RANGE_ADD:0 "ระยะของเซนเซอร์"
  MOD_COUNTRY_IMMIGRATION_PULL_ADD:0 "ดึงการอพยพย้ายเข้าจักรวรรดิ"
@@ -1395,3 +1431,10 @@
  mod_shipsize_crisis_cruiser_hull_mult:1 "HP $crisis_cruiser$"
  MOD_SHIP_DAMAGE_AGAINST_STARBASES_MULT:1 "Damage vs Starbases"
  MOD_DIPLO_ACTION_ACCEPTANCE_ADD:0 "Diplomatic Acceptance"
+ mod_ships_energy_upkeep_mult:0 "Ships £energy£ Energy Upkeep"
+ mod_starbases_energy_upkeep_mult:0 "Starbases £energy£ Energy Upkeep"
+ MOD_CATAPULT_SPREAD_BASE:0 "Quantum Catapult Accuracy (Base)"
+ MOD_CATAPULT_SPREAD_MULT:0 "Quantum Catapult Accuracy"
+ MOD_CATAPULT_RANGE_BASE:0 "Quantum Catapult Range (Base)"
+ MOD_CATAPULT_RANGE_MULT:0 "Quantum Catapult Range"
+ mod_quantum_catapult_megastructure_bypass_windup_mult:0 "Quantum Catapult Windup"
