--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -62,12 +62,12 @@
  job_mortal_initiate:0 "Mortal Initiate"
  job_mortal_initiate_plural:0 "Mortal Initiates"
  job_mortal_initiate_desc:0 "These most devout pupils of their faith dedicate the remaining portion of their lives to the betterment of their society - a study which concludes with their willing, fatal sacrifice."
- job_mortal_initiate_effect_desc:0 "£job_mortal_initiate£ $job_mortal_initiate_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £society£ §Y$society_research$§!"
+ job_mortal_initiate_effect_desc:1 "£job_mortal_initiate£ $job_mortal_initiate_plural$ produce £unity£ §Y$unity$§!, £society£ §Y$society_research$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
  mod_job_mortal_initiate_add:0 "งาน$job_mortal_initiate$"
  mod_job_mortal_initiate_per_pop:0 "§G+1§! อาชีพ $job_mortal_initiate$ ต่อ $VALUE$ ประชากร"
  mod_job_mortal_initiate_per_pop_short:0 "\n§G+1§! £mod_job_mortal_initiate_add£ ต่อ $VALUE$ £pop£"
  jobs_death_priest_and_mortal_initiate_effect_desc:0 "$job_death_priest_effect_desc$\n$job_mortal_initiate_effect_desc$"
- edict_sacrifice_unity_boost: "\n\nIncreases the £unity£ Unity output of £job_death_priest£ $job_death_priest_plural$ while the edict is in effect.\n"
+ edict_sacrifice_unity_boost:0 "\n\nIncreases the £unity£ Unity output of £job_death_priest£ $job_death_priest_plural$ while the edict is in effect.\n"
  edict_sacrifice_dummy:0 "Sacrifices"
  edict_sacrifice_dummy_desc:0 "The most devout amongst us are prepared to meet their fate, keen to give their lives for the better of our society. With the §HTogetherness§!, §HHarmony§! and §HBounty§! Sacrifices, they need wait no longer."
  edict_sacrifice_dummy_tooltip:1 "§RKills all £job_mortal_initiate£ $job_mortal_initiate_plural$.§! Each one sacrificed grants additional £unity£ Unity, Pop Happiness or £minerals£ Mineral and £energy£ Energy output, depending on the ritual chosen. $edict_sacrifice_unity_boost$"
@@ -86,6 +86,8 @@
  sacrifice_togetherness_4_desc:0 "$sacrifice_togetherness_mod_desc$"
  sacrifice_togetherness_5:0 "$sacrifice_togetherness_mod$"
  sacrifice_togetherness_5_desc:0 "$sacrifice_togetherness_mod_desc$"
+ sacrifice_togetherness_mod_overlord:0 "$edict_sacrifice_togetherness$"
+ sacrifice_togetherness_mod_overlord_desc:0 "The Overlord performed a strange, yet oddly compelling ritual. Some of our own were sacrificed, but we feel even closer than before."
  edict_sacrifice_harmony:0 "การเสียสละ: ความสามัคคีปรองดอง"
  edict_sacrifice_harmony_desc:0 "The most devout amongst us are prepared to meet their fate. Their final sacrifice is a time for joyous celebration of purpose. Let every day be spent in honor of a good life!"
  edict_sacrifice_harmony_tooltip:2 "§RKills all £job_mortal_initiate£ $job_mortal_initiate_plural$.§! Each one sacrificed increases the odds of additional gains in Pop Happiness. $edict_sacrifice_unity_boost$"
@@ -101,6 +103,8 @@
  sacrifice_harmony_4_desc:0 "$sacrifice_harmony_mod_desc$"
  sacrifice_harmony_5:0 "$sacrifice_harmony_mod$"
  sacrifice_harmony_5_desc:0 "$sacrifice_harmony_mod_desc$"
+ sacrifice_harmony_mod_overlord:0 "$edict_sacrifice_harmony$"
+ sacrifice_harmony_mod_overlord_desc:0 "Our Overlord performed a strange yet harmonious ritual. Some were sacrificed, but those who remain are more in tune with life than ever before."
  edict_sacrifice_bounty:0 "การเสียสละ: ความเอื้ออารี"
  edict_sacrifice_bounty_desc:0 "The most devout among us are prepared to meet their fate, keen that our society should be enriched by their final sacrifice. Let death cleanse the way for vibrant life, glorious in its essence!"
  edict_sacrifice_bounty_tooltip:2 "§RKills all £job_mortal_initiate£ $job_mortal_initiate_plural$.§! Each one sacrificed increases the odds of additional gains in £minerals£ Mineral and £energy£ Energy output. $edict_sacrifice_unity_boost$"
@@ -116,6 +120,10 @@
  sacrifice_bounty_4_desc:0 "$sacrifice_bounty_mod_desc$"
  sacrifice_bounty_5:0 "$sacrifice_bounty_mod$"
  sacrifice_bounty_5_desc:0 "$sacrifice_bounty_mod_desc$"
+ sacrifice_bounty_mod_overlord:0 "$edict_sacrifice_bounty$"
+ sacrifice_bounty_mod_overlord_desc:0 "Our Overlord performed a strange yet bountiful ritual. A few of our own were sacrificed, but those who remain are now filled with radiant energy."
+ MESSAGE_OVERLORD_SACRIFICE_TITLE:0 "Mortal Initiates Sacrificed"
+ MESSAGE_OVERLORD_SACRIFICE_DESC:0 "The §YMortal Initiates§! working for our Overlord in their §Y$holding_sacrificial_shrine$§! have been ritually sacrificed."
  necroids.200.name:0 "A Sacrifice Made: [root.GetAdj] Togetherness"
  necroids.200.desc:0 "A palpable hush descends across the [root.GetName]. Pilgrims have journeyed from near and far to their chosen places of worship, forming new friendships and rekindling old ones along their way.\n\nOur society's rituals have been observed and invested in the newly-emerged $job_mortal_initiate_plural$, whose silent procession is said to have drawn smiles and tears alike. The principal $job_death_priest$ at [capital_scope.GetName] led a warm sermon, calling for the faithful to be nurturing and considerate of their relationships, and to thrive in our mutuality.\n\nAs each $job_mortal_initiate$ proceeded to the sacrificial chamber, collective sighs rang out. Each has met their end now, leaving a legacy in benevolent study."
  necroids.200.tooltip.base:0 "This sacrifice of £job_mortal_initiate£ $job_mortal_initiate_plural$ has granted an §Hadditional§!"
@@ -141,10 +149,10 @@
  civic_reanimated_armies:1 "ผู้ฟื้นคืนชีพศพ"
  civic_reanimated_armies_desc:1 "Within this society, death is no bar to the call to arms. Masters of the art of necromancy reanimate corpses to raise dread hosts and guardians, striking fear into the hearts of lesser mortals."
  disabled_by_synthetic_ascension:0 "Incompatible with §YSynthetic Ascension§!"
- civic_tooltip_reanimated_armies_effects:1 "§YMilitary Academy§! building is replaced by a §YDread Encampment§!, granting £job_necromancer£ §YNecromancer§! jobs and allowing the recruitment of §YUndead Armies§!.\n$job_necromancer_effect_desc$.\nDefeated organic armies are sometimes resurrected as §YUndead Armies§!.\nDefeated organic Leviathans can sometimes be resurrected."
+ civic_tooltip_reanimated_armies_effects:2 "§YMilitary Academy§! building is replaced by a §YDread Encampment§!, granting £job_necromancer£ §YNecromancer§! jobs and allowing the recruitment of §YUndead Armies§!.\n$job_necromancer_effect_desc$.\nDefeated organic armies are sometimes resurrected as §YUndead Armies§!.\n\nDefeated organic Leviathans can sometimes be resurrected."
  building_dread_encampment:0 "ค่ายที่พักที่น่ากลัว"
  building_dread_encampment_desc:1 "It is best to shield the activities of the necromancers from the tender eyes of the public as they raise undead hordes to fight in our armies."
- job_necromancer_effect_desc:2 "£job_necromancer£ $job_necromancer_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £physics£ £society£ §YResearch Points§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, and spawn £defense_army£ §YUndead Defense Armies§!"
+ job_necromancer_effect_desc:3 "£job_necromancer£ $job_necromancer_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £physics£ £society£ §YResearch Points§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, and spawn £defense_army£ §YUndead Defense Armies§!\nGrants access to the £building£ §Y$holding_dread_outpost$§! Holding"
  undead_army:0 "กองทัพผีดิบ"
  undead_army_desc:1 "Undead soldiers lifted from the grave by necromancers. Freed from the fear of death, they strike terror into the hearts of their enemies with their foul bearing and ferocity in battle!"
  undead_army_plural:0 "Undead Armies"
@@ -211,7 +219,7 @@
  action.62.memorialist.a:0 "They shall be remembered."
  civic_permanent_employment:0 "การจ้างงานแบบถาวร"
  civic_permanent_employment_desc:0 "This Megacorporation has ensured that its employees will never be out of a job. Ever. After the employee's time is up, they will be repurposed for simpler tasks so that they can still provide for their families and pay off their debts."
- civic_tooltip_permanent_employment_effects:0 "Can build £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\nDefeated organic Leviathans can sometimes be resurrected."
+ civic_tooltip_permanent_employment_effects:1 "Can build £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nGrants access to the £building£ §Y$holding_reemployment_center$§! Holding\nDefeated organic Leviathans can sometimes be resurrected."
  job_reassigner:0 "Reassigner"
  job_reassigner_desc:0 "Reassigners ensure that once a Megacorporation's citizen has passed on, their remains will stay at work until the fulfillment of their contract."
  job_reassigner_plural:0 "Reassigners"
