--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -3,9 +3,22 @@
  civic_idyllic_bloom_desc:0 "This society has always spent much time on improving and caring for their environment, in pursuit of building a true paradise for its inhabitants."
  civic_hive_idyllic_bloom:0 "$civic_idyllic_bloom$"
  civic_hive_idyllic_bloom_desc:0 "The Hive Mind cares for the environment, building a paradise in pursuit of synergistic perfection."
- civic_tooltip_idyllic_bloom_effects:0 "สามารถสร้าง £building£ §Y$building_gaiaseeders$§! บนโลกที่เหมาะสำหรับเผ่าพันธุ์เริ่มต้นของคุณ\n$building_gaiaseeders_all_desc$"
+ civic_tooltip_idyllic_bloom_effects:2 "Can build £building£ §Y$building_gaiaseeders$§! on your and your vassal's worlds ideal to your starting species.\n$building_gaiaseeders_all_desc$\nAs you unlock improved £society£ §YTerraforming§! technologies, £building£ §Y$building_gaiaseeders$§! can be constructed on additional planet types."
  civic_tooltip_not_idyllic_bloom:0 "ไม่มีพลเมือง §Y$civic_idyllic_bloom$§!"
  disables_idyllic_bloom:0 "§Rการเลือกการยกระดับนี้จะปิดการใช้งานคุณสมบัติพลเมือง$civic_idyllic_bloom$§!"
+ gaiaseeders_tomb_world:0 "$TRIGGER_FAIL$Requires £society£ §Y$tech_climate_restoration$§! to build on §YTomb Worlds§!."
+ gaiaseeders_same_climate_start:0 "$TRIGGER_FAIL$Requires £society£ §Y$tech_terrestrial_sculpting$§! to build on"
+ gaiaseeders_different_climate_start:0 "$TRIGGER_FAIL$Requires £society£ §Y$tech_ecological_adaptation$§! to build on"
+ gaiaseeders_wet:0 "§YWet§!"
+ gaiaseeders_dry:0 "§YDry§!"
+ gaiaseeders_cold:0 "§YCold§!"
+ gaiaseeders_same_climate_wet:0 "$gaiaseeders_same_climate_start$ $gaiaseeders_wet$ §YPlanets§!."
+ gaiaseeders_same_climate_dry:0 "$gaiaseeders_same_climate_start$ $gaiaseeders_dry$ §YPlanets§!."
+ gaiaseeders_same_climate_cold:0 "$gaiaseeders_same_climate_start$ $gaiaseeders_cold$ §YPlanets§!."
+ gaiaseeders_different_climate_wet:0 "$gaiaseeders_different_climate_start$ $gaiaseeders_dry$ or $gaiaseeders_cold$ §YPlanets§!."
+ gaiaseeders_different_climate_dry:0 "$gaiaseeders_different_climate_start$ $gaiaseeders_same_climate_wet$ or $gaiaseeders_cold$ §YPlanets§!."
+ gaiaseeders_different_climate_cold:0 "$gaiaseeders_different_climate_start$ $gaiaseeders_same_climate_wet$ or $gaiaseeders_same_climate_dry$ §YPlanets§!."
+ gaiaseeders_special_habitability_preference:0 "$gaiaseeders_different_climate_start$ $gaiaseeders_wet$, $gaiaseeders_dry$ or $gaiaseeders_cold$ §YPlanets§!."
  building_gaiaseeders:0 "Gaia Seeders"
  building_gaiaseeders_1:0 "$building_gaiaseeders$ - ช่วงที่ 1"
  building_gaiaseeders_2:0 "$building_gaiaseeders$ - ช่วงที่ 2"
@@ -18,11 +31,21 @@
  building_gaiaseeders_4_desc:0 "$building_gaiaseeders_all_desc$"
  building_gaiaseeders_4_effect_desc:0 "Terraforms the planet into a §YGaia World§! on completion."
  plant.100.name:0 "Idyllic Perfection"
- plant.100.desc:0 "Through our superior bio-engineering, considerable investments, and years of hard labor, our Gaia Seeding project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true gem among planets, to admire, or mayhap envy."
+ plant.100.desc:1 "Through our superior bio-engineering, considerable investments, and years of hard labor, our Gaia Seeding project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day on, §Y[Root.GetName]§! must be considered a true gem among planets, to admire, or perhaps envy."
  plant.100.a:0 "Let the celebrations begin!"
  plant.100.b:0 "We did well, time to focus elsewhere now."
+ plant.105.desc:0 "Through our superior bio-engineering, considerable investments, and years of hard labor, our Gaia Seeding project on §Y[From.Planet.GetName]§! has come to fruition.\n\nFrom this day on, §Y[From.Planet.GetName]§! must be considered a true gem among planets, to admire, or perhaps envy. We are sure that our vassals appreciate our efforts."
+ plant.110.desc:0 "Our Overlord have completed their strange project on §Y[from.from.planet.GetName]§!, transforming it into a Gaia world. Thanks to them we can now put the idyllic climate and vast open spaces of this paradise to good use."
+ plant.110.desc.hydrocentric:0 "Our Overlord have completed their strange project on §Y[from.from.planet.GetName]§!. The planet is ruined! They have covered the oceans with plains and rolling hills. The once humid atmosphere has grown barren and dry. Even worse, when we voiced our concerns they were rejected out of hand! The Overlords say that they have made our world "prettier.""
+ plant.110.a:0 "How dare they!"
+ plant.110.b:0 "How thoughtful!"
+ plant.110.c:0 "What a curious decision."
  celebrate_idyllic_bloom:0 "Celebrating Idyllic Transformation"
  celebrate_idyllic_bloom_desc:0 "A planet-wide celebration is taking place following the successful transformation of this world into an idyllic paradise."
+ terraformed_our_ocean_world:0 "Terraformed Ocean World"
+ terraformed_our_ocean_world_desc:0 "Our Overlord has terraformed a beautiful ocean world into a nasty Gaia one. What terrible taste."
+ thankful_for_gaia:0 "Thankful for Gaia"
+ thankful_for_gaia_desc:0 "Our Overlord has recently terraformed one of our planets into a gaia world. How kind of them!"
  trait_plantoid_phototrophic:0 "สังเคราะห์แสง"
  trait_plantoid_phototrophic_desc:0 "§LThis species is sustained by a combination of both food and sunlight.§!\n"
  TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "แทนที่ §Y50%§! ของ £food£ §Yอาหาร§! ที่ใช้บำรุงรักษา ด้วย £energy£ §Yพลังงาน§!"
@@ -37,14 +60,13 @@
  civic_catalytic_processing:0 "ตัวเร่งปฏิกิริยาแปรสภาพ"
  civic_catalytic_processing_desc:0 "By focusing their industrial efforts on catalytic chemistry, this civilization has unlocked the key to using organic materials in the construction of spacebound structures."
  civic_tooltip_catalytic_processing_effects:0 "แทนที่ £job_foundry£ §Y$job_foundry_plural$§! ด้วย £job_catalytic_technician£ §Y$job_catalytic_technician_plural$§! $job_catalytic_technician_effect_desc$"
- civic_tooltip_not_catalytic:0 "ไม่มีพลเมือง §Y$civic_catalytic_processing$§!"
- civic_corporate_catalytic_processing:0 "$civic_catalytic_processing$"
+ civic_corporate_catalytic_processing:1 "Catalytic Recyclers"
  civic_corporate_catalytic_processing_desc:0 "This Megacorporation seeks to maximize profits by recycling excess organic matter into advanced resources suitable for spacebound structures."
  civic_tooltip_catalytic_processing_corporate_effects:0 "$civic_tooltip_catalytic_processing_effects$"
- civic_hive_catalytic_processing:0 "$civic_catalytic_processing$"
+ civic_hive_catalytic_processing:1 "Organic Reprocessing"
  civic_hive_catalytic_processing_desc:0 "The Hive Mind reprocesses excess organic matter into advanced resources suitable for spacebound structures."
  civic_tooltip_hive_catalytic_processing_effects:0 "แทนที่ £job_alloy_drone£ §Y$job_alloy_drone_plural$§! ด้วย £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! $job_catalytic_drone_effect_desc$"
- civic_machine_catalytic_processing:0 "$civic_catalytic_processing$"
+ civic_machine_catalytic_processing:1 "$civic_hive_catalytic_processing$"
  civic_machine_catalytic_processing_desc:0 "The Machine Intelligence reprocesses redundant organic matter into advanced resources suitable for spacebound structures."
  civic_tooltip_machine_catalytic_processing_effects:0 "แทนที่ £job_fabricator£ §Y$job_fabricator_plural$§! ด้วย £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! $job_catalytic_drone_effect_desc$"
  job_catalytic_technician:0 "ช่างเทคนิคเร่งปฏิกิริยา"
