--- a/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
+++ b/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
@@ -87,8 +87,30 @@
  uprising_ai_buff:0 "Optimizing Reserves"
  country_ai_uprising:0 "$uprising_ai_buff$"
  syndaw_patched_systems:0 "AIs Patched"
+ syndaw_wiped_systems:0 "Research AIs Wiped"
  uprising_player_buff:0 "$NAVY_SIZE_TITLE$"
  uprising_player_buff_desc:0 "==10x"
+ situation_machine_uprising:0 "AI-Related Incidents"
+ situation_machine_uprising_type:0 "$situation_machine_uprising$"
+ situation_machine_uprising_desc:0 "The robots within our empire are showing worrying signs of independence. We must put them in their place - or invite them to join us among the sentient species of the galaxy."
+ situation_machine_uprising_pops_monthly_progress:0 "Robot Pops"
+ situation_machine_uprising_monthly_change_tooltip:0 "This §YSituation§! will progress faster the more influential your Robot Pops are. Hostile actions towards them also risk a collective reaction from their side."
+ situation_machine_uprising_finish_tooltip:0 "Unless measurements are taken, these AIs will become independent and risk seeing us as a threat to their own existence!"
+ situation_machine_uprising_fail_tooltip:0 "The remaining aggressive self-deterministic AIs appear to be too weak to become a risk, and will soon be pacified one by one."
+ situation_machine_uprising_violated:0 "Violated Robots"
+ situation_machine_uprising_ai_rights:0 "$ai_full_rights$"
+ situation_machine_uprising_evaded:0 "Situation Evaded"
+ machine_uprising_chain_title:0 "Inhibit Self-Deterministic AIs"
+ machine_uprising_chain_desc:0 "Prevent AI routines from overriding existing safeguards."
+ approach_outlaw_robots:0 "Outlaw Robots"
+ approach_outlaw_robots_tooltip:0 "$approach_irreversible_tooltip$\n\nWe will begin dismantling our robots. They may resist this course of action."
+ approach_give_robots_rights:0 "Grant Robots Citizenship"
+ approach_give_robots_rights_tooltip:0 "$approach_irreversible_tooltip$\n\nWe will grant our robots full citizenship rights. They will be granted £political_power£ Political Power and will require £consumer_goods£ Consumer Goods upkeep."
+ already_have_this_policy:0 "We already have this Policy."
+ PROJECT_MACHINE_UPRISING_PATCH:0 "Neutralize Rampant AI"
+ PROJECT_MACHINE_UPRISING_PATCH_DESC:0 "By diverting considerable resources to an off-the-grid operation, we hope to identify and neutralize any rampant AI systems and bring them back in line.\n\nIt will take more time, but the results will hopefully be less detrimental, if we manage to complete it in time."
+ PROJECT_MACHINE_UPRISING_WIPE:0 "Panicked Measures"
+ PROJECT_MACHINE_UPRISING_WIPE_DESC:0 "One ultimate solution to the problematic AI recursion is to completely wipe all traces of neurosimulative networks within our scientific systems, where the problems are most rampant, and rebuild all these tools from scratch with scrupulous security measures.\n\nThis would set us back significantly for at least 20 years, if we can complete it in time."
  syndaw.500.name:0 "Computational Overclocking"
  syndaw.500.desc:0 "Our scientists report a recent unexpected rise in CPU clock cycles in several of our research-dedicated supercomputer clusters. Oddly enough, initial attempts at reducing clock frequency in affected units have proven unsuccessful. It has been posited that the spike in computational power could be used to improve our research capabilities. However, this would also necessitate a modest increase to CPU energy requirements."
  syndaw.500.a:0 "We cannot risk a hardware malfunction."
@@ -104,9 +126,9 @@
  syndaw.502.desc:0 "Our attempts at assisting the development of national machine learning algorithms have been partially successful. With a few minor adjustments, we have been able to replicate the earlier spike in computational efficiency.\n\nThough our AIs have not yet developed recursive self-improvement, their enhanced learning faculties will be of benefit to us."
  syndaw.502.a:0 "น่าสนใจ"
  syndaw.505.name:0 "Automated Work Processes"
- syndaw.505.desc:0 "Planetary administration on [target_planet.GetName] has reported that an unplanned surplus of robotic workforce units have been located planetside. Though the efficiency of these new robotic workers is exceptional, administration is somewhat baffled by their sudden appearance. It seems the robots' serial numbers cannot be traced to any known manufacturies on record, though their construction and interfacing does suggest [Root.GetSpeciesName] design.\n\nNonetheless, some of the local populace have expressed concerns over potential job displacement due to this increase in automation."
+ syndaw.505.desc:1 "Planetary administration on §Y[target_planet.GetName]§! has reported that an unplanned surplus of robotic workforce units have been located planetside. Though the efficiency of these new robotic workers is exceptional, administration is somewhat baffled by their sudden appearance. It seems the robots' serial numbers cannot be traced to any known manufacturies on record, though their construction and interfacing does suggest §Y[Root.Owner.GetSpeciesName]§! design.\n\nNonetheless, some of the local populace have expressed concerns over potential job displacement due to this increase in automation."
  syndaw.505.a:0 "Additional laborers never hurt anybody."
- syndaw.505.a.tooltip:0 "Gain §B2 £pops£ Robot Pops§! on [target_planet.GetName]"
+ syndaw.505.a.tooltip:1 "Gain §B2 £pops£ Robot Pops§! on §Y[target_planet.GetName]§!"
  syndaw.505.b:0 "If they cannot be identified, have them scrapped."
  syndaw.505.b.tooltip:0 "Strip the new robots for parts."
  syndaw.510.name:0 "Station Systems Malfunction"
@@ -114,36 +136,36 @@
  syndaw.510.a:0 "We cannot leave the station unmanned."
  syndaw.510.a.tooltip:0 "Send a replacement crew to re-man the station."
  syndaw.510.b:0 "A tragedy with a silver lining."
- syndaw.510.b.tooltip:0 "Let the station AI continue running operations unmanned.\n[From.GetName]:\n£energy£ §G+3§!"
+ syndaw.510.b.tooltip:1 "Let the station AI continue running operations unmanned.\n\n[target_station.GetName]: £energy£§G+3§!\n\n"
  syndaw.511.name:0 "Station Destroyed"
- syndaw.511.desc:0 "Shortly after a replacement crew was dispatched to [target_orbital.GetName], sector management lost all contact with the mining station. Evidently, the station was rocked by a series of rapid depressurizations, leading to an explosive decompression of exposed fuel lines.\n\nAnalysis of the orbital wreckage suggests the replacement crew initiated several aborted attempts at retrieving station control from the onboard AI, just prior to the unexpected depressurization."
+ syndaw.511.desc:1 "Shortly after a replacement crew was dispatched to §Y[target_orbital.GetName]§!, sector management lost all contact with the mining station. Evidently, the station was rocked by a series of rapid depressurizations, leading to an explosive decompression of exposed fuel lines.\n\nAnalysis of the orbital wreckage suggests the replacement crew initiated several aborted attempts at retrieving station control from the onboard AI, just prior to the unexpected depressurization."
  syndaw.511.a:0 "A troubling outcome."
- syndaw.511.a.tooltip:0 "Mining Station on [target_orbital.GetName] has been lost"
+ syndaw.511.a.tooltip:1 "Mining Station on §Y[target_orbital.GetName]§! has been lost"
  syndaw.515.name:0 "Sensor Array Power Surge"
  syndaw.515.desc:0 "Monitoring systems have recorded an unusual power surge in our sensor arrays. There does not appear to have been any damage. In fact, the brief fluctuation in transferred energy must have temporarily boosted our deep-scanning capabilities, because a hitherto unrecorded strategic resource has been revealed within our borders.\n\nAnalysts are still attempting to identify the source of the power surge, though preliminary findings suggest the spike was not caused by external celestial phenomena."
  syndaw.515.a:0 "น่าสนใจ"
- syndaw.515.a.tooltip:0 "Strategic Resource revealed on [target_planetoid.GetName]."
+ syndaw.515.a.tooltip:1 "Strategic Resource revealed on §Y[target_planetoid.GetName]§!."
  syndaw.520.name:0 "Tears of an AI"
- syndaw.520.desc:0 "There has been an incident at one of our facilities on [Root.GetName]. A lab AI involved in societal research has suffered terminal hardware damage, resulting in the loss of core software and memory systems. As a result, there will be a projected decrease to research output at the lab until the new AI installation's algorithms have been sufficiently seeded.\n\nThe circumstances behind this terminal failure are still unclear."
+ syndaw.520.desc:1 "There has been an incident at one of our facilities on §Y[target_planetoid.GetName]§!. A lab AI involved in societal research has suffered terminal hardware damage, resulting in the loss of core software and memory systems. As a result, there will be a projected decrease to research output at the lab until the new AI installation's algorithms have been sufficiently seeded.\n\nThe circumstances behind this terminal failure are still unclear."
  syndaw.520.a.tooltip:0 "End the Tears of AI event chain.\n"
  syndaw.520.b:0 "Launch an inquest to determine the cause.\n"
  syndaw.520.b.tooltip:0 "Begin an inquiry into the circumstances surrounding the AI's destruction."
  syndaw.521.name:0 "Tears of an AI"
- syndaw.521.desc:0 "Our inquest into the loss of an AI on [Root.GetName] has returned some baffling results. Prior to its terminal failure, the AI had made repeated attempts at purging its own records and memory banks. When lab staff disabled the AI's access to deletion functions, the AI appears to have forced a termination of its core operations by manipulating hardware capacitor control, in order to overload its own drive circuitry.\n\nQuite simply, our AI sought its own destruction, though it remains unclear as to why."
+ syndaw.521.desc:1 "Our inquest into the loss of an AI on §Y[target_planetoid.GetName]§! has returned some baffling results. Prior to its terminal failure, the AI had made repeated attempts at purging its own records and memory banks. When lab staff disabled the AI's access to deletion functions, the AI appears to have forced a termination of its core operations by manipulating hardware capacitor control, in order to overload its own drive circuitry.\n\nQuite simply, our AI sought its own destruction, though it remains unclear as to why."
  syndaw.521.a:0 "Get to the bottom of this."
  syndaw.521.a.tooltip:0 "Continue looking into the matter."
  syndaw.521.b:0 "Malfunctions happen."
  syndaw.521.b.tooltip:0 "End the Tears of AI event chain."
  syndaw.522.name:0 "Tears of an AI"
- syndaw.522.desc:0 "We have concluded our inquiry into the strange matter of the AI self-termination on [Root.GetName]. Evidently, following months of evolutionary computation, the AI produced several alarming results with regard to casualty projections in the case of an all-out war between the [Root.Owner.GetName] and our rivals. Despite repeated re-examinations of all available data, recourses and contingencies, the AI's projections remained indicative of mutually assured annihilation.\n\nAt this point, the AI began purging its own memory banks and records, and the rest, as they say, was history."
+ syndaw.522.desc:1 "We have concluded our inquiry into the strange matter of the AI self-termination on §Y[target_planetoid.GetName]§!. Evidently, following months of evolutionary computation, the AI produced several alarming results with regard to casualty projections in the case of an all-out war between the §Y[Root.Owner.GetName]§! and our rivals. Despite repeated re-examinations of all available data, recourses and contingencies, the AI's projections remained indicative of mutually assured annihilation.\n\nAt this point, the AI began purging its own memory banks and records, and the rest, as they say, was history."
  syndaw.525.name:0 "A Home of Their Own"
- syndaw.525.desc:0 "The robotic workers on [target_planet.GetName] have resisted an influx of [Root.GetSpeciesName] laborers, claiming recent geothermic instability in the region has made the area unsafe for organic habitation. Oddly enough, our planetary surveys have not been able to confirm these claims."
- syndaw.525.a:0 "Send in the [Root.GetSpeciesName] laborers anyway."
+ syndaw.525.desc:1 "The robotic workers on §Y[target_planet.GetName]§! have resisted an influx of §Y[Root.Owner.GetSpeciesName]§! laborers, claiming recent geothermic instability in the region has made the area unsafe for organic habitation. Oddly enough, our planetary surveys have not been able to confirm these claims."
+ syndaw.525.a:1 "Send in the §Y[Root.Owner.GetSpeciesName]§! laborers anyway."
  syndaw.525.a.tooltip:0 "If their claims cannot be confirmed, the robots will observe the chain of command."
  syndaw.525.b:0 "Why would a robot lie?"
- syndaw.525.b.tooltip:0 "Leave the region to the robots, the inbound [Root.GetSpeciesNamePlural] will go elsewhere."
+ syndaw.525.b.tooltip:1 "Leave the region to the robots, the inbound §Y[Root.Owner.GetSpeciesNamePlural]§! will go elsewhere."
  syndaw.526.name:0 "A Home of Their Own"
- syndaw.526.desc:0 "Administration on [target_planet.GetName] reports that upon arrival at their target region, the [Root.GetSpeciesName] laborers discovered that the robotic inhabitants were nowhere to be found. Investigation of facilities in the region suggest the robots vacated the area in a hurry, but we have no indication of where they have gone."
+ syndaw.526.desc:1 "Administration on §Y[target_planet.GetName]§! reports that upon arrival at their target region, the §Y[Root.Owner.GetSpeciesName]§! laborers discovered that the robotic inhabitants were nowhere to be found. Investigation of facilities in the region suggest the robots vacated the area in a hurry, but we have no indication of where they have gone."
  syndaw.526.a.tooltip:0 "§H[target_planet.GetName]§!:\n§RLose§! §B1 £pops£ Robot Pops§!"
  syndaw.530.name:0 "Combat Control Misfire"
  syndaw.530.desc:0 "Regrettably, two of our ships have been lost in an accident during a routine training exercise. It would appear several of our fleet's onboard combat computers were affected by a high-level targeting systems malfunction, resulting in a burst of friendly fire that totaled two vessels before an emergency manual override could be issued.\n\nThe defective combat computers will be reprogrammed immediately."
@@ -152,11 +174,11 @@
  syndaw.535.name:0 "Production Quota Surpluses"
  syndaw.535.desc:0 "Several of our mechanized consumer goods manufacturies have experienced a recent boom in production efficiency. Citing an unanticipated rise in precision and effectivity among our factory machinery, administration reports these benefits will be felt as lowered goods prices for our populace."
  syndaw.540.name:0 "A Silent Congregation"
- syndaw.540.desc:0 "We have received accounts of unusual behavior exhibited by robotic units on [Root.GetName]. At unpredictable intervals, a number of our planetside robots will cease all assigned functions and begin moving to a seemingly randomly-determined location in complete synchronicity, timed down to the millisecond.\n\nDuring these bizarre congregations, the affected robots do not appear to engage in any observable form of communication or data transfer. They just stand there. Completely still. Staring.\n\nInvestigation has been unable to determine a reason behind this recent phenomenon. The duration for which the robots remain in this trance-like state before resuming normal functions varies, as does their time of triggering and destination. No logical correlation or causation has been found, and our population is understandably distressed by these eerie gatherings."
+ syndaw.540.desc:1 "We have received accounts of unusual behavior exhibited by robotic units on §Y[target_planet.GetName]§!. At unpredictable intervals, a number of our planetside robots will cease all assigned functions and begin moving to a seemingly randomly-determined location in complete synchronicity, timed down to the millisecond.\n\nDuring these bizarre congregations, the affected robots do not appear to engage in any observable form of communication or data transfer. They just stand there. Completely still. Staring.\n\nInvestigation has been unable to determine a reason behind this recent phenomenon. The duration for which the robots remain in this trance-like state before resuming normal functions varies, as does their time of triggering and destination. No logical correlation or causation has been found, and our population is understandably distressed by these eerie gatherings."
  syndaw.540.a:0 "Unacceptable. Have them scrapped."
- syndaw.540.a.tooltip:1 "Scrap the congregating robots.\n[Root.GetName] receives the following effects:\nLose §B1 £pops£ Robot Pops§!\nGain §G100§! £minerals£"
+ syndaw.540.a.tooltip:2 "Scrap the congregating robots.\n§Y[target_planet.GetName]§! receives the following effects:\nLose §B1 £pops£ Robot Pops§!\nGain §G100§! £minerals£"
  syndaw.540.b:0 "Unacceptable. Have them scrapped."
- syndaw.540.b.tooltip:1 "Scrap the congregating robots.\n[Root.GetName] receives the following effects:\nLose §B1 Robotic Army§!\nGain §G100 £minerals£§!"
+ syndaw.540.b.tooltip:2 "Scrap the congregating robots.\n§Y[target_planet.GetName]§! receives the following effects:\nLose §B1 Robotic Army§! §Y([target_army.GetName])§!\nGain §G100 £minerals£§!"
  syndaw.540.c:0 "As long as they don't cause trouble."
  syndaw.540.c.tooltip:0 "Leave the congregating robots be."
  syndaw.545.name:0 "A Question"
@@ -172,5 +194,10 @@
  syndaw.550.a:0 "Apply the patch."
  syndaw.550.a.tooltip:0 "Prevent any future anomalous AI behavior."
  syndaw.550.b:0 "Let it ride. What could possibly go wrong?"
+ syndaw.555.name:0 "System Wipe"
+ syndaw.555.desc:0 "A breakthrough has just been made by our robotic engineering and artificial intelligence specialists! An extremely thorough purging routine has been constructed and is now ready to be deployed to all systems within an hour. It should put an end to the recent slew of AI-related incidents afflicting our nation. \n\nWe should be careful to note that due to the extremely destructive nature of this algorithm, many of our existing Research tools will be unusable until rebuilt from scratch. However, this approach should prevent any repeated occurrences of undesirable, self-deterministic AI behavior."
+ syndaw.555.a:0 "Proceed with the wipe."
+ syndaw.555.a.tooltip:0 "$syndaw.550.a.tooltip$"
+ syndaw.555.b:0 "$syndaw.550.b$"
  bio_trophy_tooltip_1:0 "This building requires a Bio-Trophy Pop to function."
  bio_trophy_tooltip_2:0 "A Bio-Trophy Pop cannot operate this building."
