--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -452,7 +452,7 @@
  tr_subterfuge_finish:0 "วัฒนธรรมการวางอุบายสำเร็จ"
  tr_subterfuge_finish_desc:0 "เมื่อ §Yปฏิบัติการ§! สำเร็จจะได้เงินค่าใช้จ่ายคืน §G50%§! ของค่าใช้จ่ายตามระดับเลเวลการแทรกซึมของพวกเขา\nปลดล็อกการยกระดับ: §G+1§!"
  tr_subterfuge_information_security:0 "ความปลอดภัยของข้อมูล"
- tr_subterfuge_information_security_delayed:0 "Only by embracing a tradition of secrecy can we protect vital information from prying eyes."
+ tr_subterfuge_information_security_delayed:1 "Only by embracing a tradition of secrecy can we protect vital information from prying eyes. Enhanced security systems and countermeasures deny our enemies any potential advantages."
  tr_subterfuge_nda:0 "ข้อตกลงที่ไม่เปิดเผย"
  tr_subterfuge_nda_hive:0 "ต้องไม่มีจุดบอด"
  tr_subterfuge_nda_machine:0 "อัปเดตอัลกอริธึมความปลอดภัย"
@@ -464,12 +464,10 @@
  tr_subterfuge_operational_security_delayed:0 "The shift from a planetary to an interplanetary setting has posed unique challenges for our covert operatives. By adapting their training regimen to the demands of the galactic stage, we will be able to remain competitive in this new age."
  tr_subterfuge_operational_security_gestalt_delayed:0 "We are no longer as alone as we once were: a plethora of competing - and potentially hostile - entities now share our galaxy with us. In order to thrive in this new reality, we will have to adapt ourselves to the concept of "covertness" and dedicate a significant part of ourselves to finding out the secrets of others."
  tr_subterfuge_double_agents:0 "สายลับสองหน้า"
- tr_subterfuge_double_agents_desc:0 "เมื่อใดก็ตามที่ §Yปฏิบัติการ§! ของศัตรูที่มุ่งเป้ามาที่เราล้มเหลว เราจะได้รับข้อมูลข่าวกรอง §Y10§! จากจักรวรรดิที่กำลังสอดแนมเรา"
+ tr_subterfuge_double_agents_effect:0 "Whenever a hostile §YOperation§! targeting us fails, we gain §Y10§! Intel on the spying empire."
  tr_subterfuge_double_agents_delayed:0 "Through creative means of persuasion, we are able to sway even the most devoted of our enemies to contribute to our cause."
  tr_subterfuge_shadow_recruits:0 "สายลับไร้เงา"
- tr_subterfuge_shadow_recruits_gestalt:0 "$tr_subterfuge_shadow_recruits$"
- tr_subterfuge_shadow_recruits_delayed:0 "Whereas our enemies merely adopted the shadows, our operatives were born in it, molded by it."
- tr_subterfuge_shadow_recruits_gestalt_delayed:0 "Whereas our enemies merely adopted the shadows, our operative drones were created in it, molded by it."
+ tr_subterfuge_shadow_recruits_delayed:1 "Whereas our enemies merely adopted the shadows, our [Root.GetOperativesLowerPlural] were born in it, molded by it."
  tradition_unyielding:0 "ความแข็งกร้าว"
  tradition_unyielding_desc:0 "กาแล็กซีนั้นกว้างใหญ่และเต็มไปด้วยอันตราย"
  tr_unyielding_adopt:0 "วัฒนธรรมความแข็งกร้าว"
@@ -477,7 +475,7 @@
  tr_unyielding_federations_finish:0 "$tr_unyielding_finish$"
  tr_unyielding_federations_finish_desc:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT$ §G+50%§!\n$mod_starbases_upkeep_mult$ §G-20%§!\nGrants access to the §Y$military_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
  tr_unyielding_resistance_is_frugal:0 "ความอดทนนั้นประหยัด"
- tr_unyielding_resistance_is_frugal_desc:0 "สิ่งปลูกสร้าง £building£ §Y$building_stronghold$§! ตอนนี้สามารถผลิต £unity£ เอกภาพ ได้ §Y3§! นอกจากนี้ §Y$MOD_ARMY_DEFENSE_HEALTH_MULT$§! เพิ่มขึ้น §G+25%§!"
+ tr_unyielding_resistance_is_frugal_desc:1 "£defense_army£ §YDefense Armies§! now produce §Y0.5§! £unity£ Unity. In addition, §Y$MOD_ARMY_DEFENSE_HEALTH_MULT$§! is increased by §G+25%§!."
  tr_unyielding_resistance_is_frugal_hive:0 "$tr_unyielding_resistance_is_frugal$"
  tr_unyielding_resistance_is_frugal_machine:0 "$tr_unyielding_resistance_is_frugal$"
  tr_unyielding_resistance_is_frugal_delayed:0 "Our people take great comfort in the strength of the bulwarks that guard our planets, and view them as vital to ensuring a more prosperous future."
@@ -518,7 +516,7 @@
  requires_ap_the_flesh_is_weak:1 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_the_flesh_is_weak$§!"
  requires_not_ap_the_flesh_is_weak:1 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_the_flesh_is_weak$§!"
  requires_finished_cybernetics_project:1 "$TRIGGER_FAIL$Must have finished §Yร่างกายเป็นสิ่งที่อ่อนแอ§! special project."
- requires_ap_mind_over_matter:1 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_mind_over_matter$§!"
+ requires_ap_mind_over_matter:2 "$TRIGGER_FAIL$Requires the §Y$ap_mind_over_matter$§! Ascension Perk or the §Y$origin_shroudwalker_apprentice$§! Origin."
  requires_not_ap_mind_over_matter:1 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_mind_over_matter$§!"
  allow_decision_mastery_of_nature:0 "§Hปลดล็อกการตัดสินใจ:§! ความเชี่ยวชาญในธรรมชาติ"
  describe_decision_mastery_of_nature:0 "§Eนี่คือการตัดสินใจที่เพิ่มจำนวนเขตสูงสุดที่ดาวเคราะห์สามารถรองรับได้ §Y2§! (สามารถทำได้เพียงครั้งเดียวบนดาวเคราะห์แต่ละดวง)§!"
@@ -602,6 +600,7 @@
  ap_hive_worlds_desc:0 "เราจะสร้างโลกที่มีชีวิตซึ่งเป็นส่วนหนึ่งของรังเหมือนกับโดรนที่อาศัยอยู่ด้วยกัน"
  ap_shared_destiny:0 "โชคชะตาร่วมกัน"
  ap_shared_destiny_desc:0 "เมื่อเราขึ้นไปจุดที่สูงขึ้นเรื่อยๆเราต้องไม่ทิ้งคนที่รับใช้เราด้วยความภักดี อนาคตอันรุ่งโรจน์ของจักรวรรดิเราหมายถึงการมีโชคชะตาร่วมกันเสมอ"
+ ap_shared_destiny_effect:0 "Your §YSubjects§! do not suffer $r_loyalty$ penalties from you having multiple Subjects."
  ap_world_shaper_desc:0 "การกำหนดรูปร่างและปรับเปลี่ยนระบบนิเวศของโลกทั้งใบให้เป็นอย่างอื่นอย่างระมัดระวังนั้นไม่ได้แตกต่างจากศิลปินที่ปั้นรูปปั้นจากดิน"
  ap_master_builders_desc:0 "การสร้างโครงสร้างขนาดใหญ่ต้องใช้ทรัพยากรและการวางแผนจำนวนมากอย่างไม่เคยปรากฏมาก่อน และเรากำลังเริ่มต้นใหม่ในสาขาวิศวกรรมมหภาค"
  ap_imperial_prerogative_desc:0 "เมื่ออารยธรรมของเราเติบโตขึ้นเรื่อยๆ ดังนั้นการเต้นของหัวใจก็ต้องขยายออกไปด้วย ระบบอื่นๆจะถูกวางไว้ภายใต้การควบคุมโดยตรงของเรา"
@@ -631,3 +630,5 @@
  ap_galactic_wonders_utopia_and_megacorp:2 "$ap_galactic_wonders$"
  ap_galactic_wonders_utopia_and_megacorp_desc:1 "$ap_galactic_wonders_desc$"
  ap_technological_ascendancy_rare:2 "§Mเทคโนโลยีหายาก§! ตอนนี้มีอัตรา §Y1.5§! เท่าของอัตราปกติ เอฟเฟกต์นี้จะเปลี่ยนโอกาส §Y1%§! ให้เป็น §Y1.5%§!"
+ ap_grasp_the_void_tech_effect:0 "§YFTL travel technologies§! now appear at §Y1.5§! times the normal rate."
+ requires_not_shroudwalker_apprentice:0 "$TRIGGER_FAIL$May not have the §Y$origin_shroudwalker_apprentice$§! Origin."
