--- a/mod/thmod/localisation/english/tutorial_overview_l_english.yml
+++ b/mod/thmod/localisation/english/tutorial_overview_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
  QUIT_THANK_YOU_FOR_RATING:0 "Thank you for helping us improve Stellaris!"
  QUIT_INFO_RATING:0 "ให้คะแนนประสบการณ์ของคุณ"
- QUICK_START:0 "Quick Start"
- QUICK_START_DESC:1 "Join the $EMPIRE_DESIGN_humans1$ in their first steps to explore the universe. Select this to get the best introduction to Stellaris."
- QUICK_START_INFO:0 "Selecting this will start a game immediately, letting you experience everything Stellaris has to offer without having to create an Empire from scratch."
+ QUICK_START:0 "เริ่มต้นอย่างเร็ว"
+ QUICK_START_DESC:1 "เข้าร่วม $EMPIRE_DESIGN_humans1$ ในขั้นตอนแรกเพื่อสำรวจจักรวาลที่กว้างใหญ่ไพศาล เลือกตัวเลือกนี้เพื่อรับคำแนะนำที่ดีที่สุดเกี่ยวกับเกม Stellaris"
+ QUICK_START_INFO:0 "การเลือกสิ่งนี้จะเป็นการเริ่มเกมทันที ให้คุณสัมผัสประสบการณ์ทุกอย่างที่ Stellaris นำเสนอโดยไม่ต้องสร้างหรือออกแบบจักรวรรดิใหม่ตั้งแต่ต้น"
  TUTORIAL_MISSION_VIEW_TEXT:0 "Missions"
  TUTORIAL_MISSION_VIEW_INFO:0 "Open a lightweight manual of how to get started with Stellaris."
  HUD_TUTORIAL_TEXT:0 "HUD Tutorial"
@@ -39,7 +39,7 @@
  HELP_TUTORIAL_TECHNOLOGY_ACTION:0 "Open Technologies View"
  HELP_TUTORIAL_SPACE_STATION_TITLE:0 "Expanding using Starbases"
  HELP_TUTORIAL_SPACE_STATION_DESC:0 "The most effective way of expanding the borders of your Empire is through the construction of §SStarbases§! (Outposts). This can only be done in systems that have already been §SSurveyed§!. \n\nTo build a Starbase, order a £construction_ship£ §SConstruction Ship§! to construct a §SStarbase§!. The presence of a §SStarbase§! allows for further construction of §SResearch Stations§! and §SMining Stations§!, as well as the colonization of any habitable £planet£ §SPlanets§! in the system."
- HELP_TUTORIAL_SPACE_STATION_INSTRUCTIONS:1 "§Y1.§! Open the Galaxy View by clicking the button in the central bottom part of the screen.\n§Y2.§! Right-click an unclaimed system and select "Build an outpost""
+ HELP_TUTORIAL_SPACE_STATION_INSTRUCTIONS:2 "§Y1.§! Open the Galaxy View by clicking the button in the central bottom part of the screen.\n§Y2.§! Choose a construction ship from the button in the left bottom part of the screen.\n§Y3.§! Right-click an unclaimed system and select "Build an outpost"."
  HELP_TUTORIAL_SPACE_STATION_ACTION:0 "Go to a Construction Ship"
  HELP_TUTORIAL_COLONIZATION_TITLE:0 "Colonizing Planets"
  HELP_TUTORIAL_COLONIZATION_DESC:0 "Colonizing other planets allows your £pops£ §SPopulation§! to spread beyond its initial planet and gains you access to more §SResources§! for your §SEmpire§!. Some £planet£ §SPlanets§! are generally more habitable than others, so consider where you settle new £colony_ship£ §SColonies§!. \n\nTo colonize a habitable planet, it must reside within the borders of your Empire, and have been surveyed by a £science_ship£ §SScience ship§!."
@@ -47,7 +47,7 @@
  HELP_TUTORIAL_COLONIZATION_ACTION:0 "Go to a Habitable Planet"
  HELP_TUTORIAL_EXCAVATION_TITLE:0 "Excavating Archaeology Sites"
  HELP_TUTORIAL_EXCAVATION_DESC:0 "£archaeology£ §SArchaeological Sites§! can be discovered while §SSurveying§! or be uncovered after a £planet£ §SPlanet§! has been colonized. \n\nAs long as an §SArchaeological Site§! is within the borders of an §SEmpire§!, that §SEmpire§! can task a £science_ship£ §SScience Ship§! to excavate the site. The duration of an excavation is determined by the difficulty rating of the §SArchaeological Site§!."
- HELP_TUTORIAL_EXCAVATION_INSTRUCTIONS:1 "§Y1.§! Open the Situation Log in the left navigation panel.\n§Y2.§! Choose an Archaeological Site.\n§Y3.§! Start the Project."
+ HELP_TUTORIAL_EXCAVATION_INSTRUCTIONS:2 "§Y1.§! Open the Situation Log in the left navigation panel or press F2 button.\n§Y2.§! In Situation Log bookmark choose one of the archaeology projects (Icon of shovel in soil heap).\n§Y3.§! Use the "go to" button to move to the archaeological site.\n§Y4.§! Choose a Science ship from the button in the left bottom part of the screen.\n§Y5.§! Right click on the shovel icon and choose "excavate site" option.\n§Y6.§! Choose an Archeological site.\n§Y7.§! Start the project."
  HELP_TUTORIAL_EXCAVATION_ACTION:0 "Open the Situation Log"
  HELP_TUTORIAL_BASIC_RESOURCES_TITLE:0 "Basic Resources"
  HELP_TUTORIAL_BASIC_RESOURCES_DESC:0 "Basic Resources involve £energy£ §SEnergy Credits§!, £minerals£ §SMinerals§! and £food£ §SFood§!. \n\nThese resources are produced primarily by the £building£ §SBuildings§! on your £planet£ §SPlanets§! or by §SMining Stations§!. The basic resources are all gathered and stockpiled on a monthly basis and ought to be quickly scouted, exploited, and developed."
@@ -63,7 +63,7 @@
  HELP_TUTORIAL_STRATEGIC_RESOURCES_DESC:0 "Strategic Resources are rare and required to build and maintain advanced buildings and ship components. They are much harder to obtain than basic resources and are therefore also highly valued. Natural strategic resource deposits are always visible but require specific §STechnologies§! to exploit."
  HELP_TUTORIAL_TRADE_VALUE_TITLE:0 "Trade Value"
  HELP_TUTORIAL_TRADE_VALUE_DESC:1 "£trade_value£ §STrade Value§! is derived from civilian day to day economic activity. \n\nIf connected to your £planet£ §SCaptial Planet§! through a §STrade Route§!, the §SStarbase§! will provide the £trade_value£ §STrade Value§! of a system in the form of £energy£ §SEnergy Credits§!, £consumer_goods£ §SConsumer Goods§! or £unity£ §SUnity§!, based on the trade policy of the §SEmpire§!."
- HELP_TUTORIAL_TRADE_VALUE_INSTRUCTIONS:1 "§Y1.§! Open the Galaxy View by clicking the button in the central bottom part of the screen.\n§Y2.§! Right-click an unclaimed system and select "Build an Outpost"."
+ HELP_TUTORIAL_TRADE_VALUE_INSTRUCTIONS:2 "§Y1.§! Open Galaxy View by clicking the button in the central bottom part of the screen.\n§Y2.§! Select a Construction Ship in the Outliner (right side of the screen) or in bottom left tab.\n§Y3.§! Right-click an unclaimed system and select "Build an outpost"."
  HELP_TUTORIAL_TRADE_VALUE_ACTION:0 ""
  HELP_TUTORIAL_TRADE_VALUE_DISBLAED_ACTION:0 ""
  HELP_TUTORIAL_PLANET_MANAGEMENT_TITLE:0 "Planetary Management"
@@ -130,7 +130,7 @@
  HELP_TUTORIAL_FLEET_COMBAT_ACTION:0 "Go to a Fleet"
  HELP_TUTORIAL_WAR_EXHAUSTION_TITLE:0 "Defending Your Systems"
  HELP_TUTORIAL_WAR_EXHAUSTION_DESC:1 "§SStarbases§! is your defensive cornerstones in your systems. Outposts in key locations can also be upgraded to §SStarports§! making it more capable in defending the system by giving it more slots for §SDefense Modules§!. \n\nThe self-defense capabilities of a §SStarbase§! can be reinforced with the construction of §SDefense Platforms§!. §SDefense Platforms§! are smaller military stations that are deployed around the §SStarbase§! and act as weapons platforms. "
- HELP_TUTORIAL_WAR_EXHAUSTION_INSTRUCTIONS:1 "§Y1.§! Click on any Starbase.\n§Y2.§! Select Defense tab\n§Y3.§! Build a Defense Platform."
+ HELP_TUTORIAL_WAR_EXHAUSTION_INSTRUCTIONS:2 "§Y1.§! Click on any Starbase.\n§Y2.§! Select Defense tab.\n§Y3.§! Build a Defense Platform."
  HELP_TUTORIAL_WAR_EXHAUSTION_ACTION:0 ""
  HELP_TUTORIAL_SHIP_DESIGN_TITLE:0 "Designing Ships"
  HELP_TUTORIAL_SHIP_DESIGN_DESC:1 "By default, Ship Designs will be auto generated and updated, but to get the edge over tougher opponents you may want to create ship designs that counter the hostile fleet. Shields are tough against lasers, but vulnerable to missiles, while a strong hull protects against ballistics better than against energy weapons."
