--- a/mod/thmod/localisation/english/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/event_names_l_english.yml
@@ -197,7 +197,7 @@
  NAME_Loot-Equipped_Army:0 "Loot-Equipped Army"
  NAME_MERN:0 "MERN"
  NAME_Machine_Uprising_War:0 "[This.MainDefender.GetAdj] Machine Uprising"
- NAME_WAR_OF_REVOLT:0 "War of the [Root.Target.GetName] Uprising"
+ NAME_WAR_OF_REVOLT:1 "The [Root.Target.GetName] Uprising"
  NAME_Main_Forces:0 "Main Forces"
  NAME_Majula_the_Bearer:0 "Majula the Bearer"
  NAME_Marauding_Creatures:0 "Marauding Creatures"
