--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -1913,7 +1913,7 @@
  origin_enlightened_desc:0 "The natural development of this civilization was greatly accelerated by the interference of another party, who helped them become a spacefaring culture."
  origin_void_dwellers:0 "ผู้อยู่อาศัยในอวกาศ"
  origin_void_dwellers_desc:0 "This civilization has made its home in space for as long as it has maintained records - life in a typical planetary environment is anathema to them. They live on three orbital habitats that were only recently united."
- origin_tooltip_void_dwellers_effects:5 "- เริ่มต้นด้วยสาม §Hที่อยู่อาศัยในวงโคจรดาว§! และเทคโนโลยีที่จะสร้างเพิ่มเติม\n- สมาชิกในเผ่าพันธุ์ของคุณเจริญเติบโตได้จากแหล่งที่อยู่อาศัยดังกล่าวและผลเพิ่มขึ้น §G+15%§!\n- ได้รับโทษการอยู่อาศัยที่รุนแรงและการผลิตลดลง §R-15%§! บนดาวเคราะห์แบบปกติทั้งหมด\n- การทำฟาร์มปลูกพืชไร้ดินทำให้มี £job_farmer£ อาชีพ$job_farmer$ §G+1§!"
+ origin_tooltip_void_dwellers_effects:6 "- Start with three §HOrbital Habitats§! and the technology to build more\n- Members of your species thrive on Habitats and produce §G+15%§! more there\n- Severe habitability penalties alongside a §R-15%§! production penalty on all normal planets\n- Hydroponic Farms have §G+1§! £job_farmer£ $job_farmer$ Job\n- £building£ §HHabitat Administrations§! replace £job_politician£ §H$job_politician_plural$§! with £job_colonist£ §H$job_colonist_plural$§!"
  trait_void_dweller_1:0 "ผู้อยู่อาศัยในอวกาศ"
  trait_void_dweller_1_desc:1 "§LThis species thrives in orbital habitats, with an instinctive ability to efficiently navigate their maze-like corridors and complicated architecture. However their weakened immune systems do not respond well to a planetary environment.§!"
  void_dweller_trait_tooltip:0 "Pop Happiness on Non-Artificial Worlds: §R-30%§!"
