--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1094,8 +1094,8 @@
  ALLIANCE_LEADER_DESC:0 "This star nation is the leader of a larger interstellar alliance."
  ALLIANCE_MEMBER:0 "สมาชิกของ $ALLIANCE$"
  ALLIANCE_MEMBER_DESC:0 "This star nation is a member of a larger interstellar alliance."
- REBELS_UNDER:0 "กบฏของ $COUNTRY$"
- REBELS_UNDER_DESC:0 "This is a rebel faction that has broken free of a star nation. If their rebellion succeeds, they will become an independent nation in their own right."
+ REBELS_UNDER:1 "Rebelled against the $COUNTRY$"
+ REBELS_UNDER_DESC:1 "They began as a rebellion against another star nation, from which they have successfully broken free."
  PRIMITIVE:0 "§Hอารยธรรมดึกดำบรรพ์ ($AGE|Y$)§!"
  PRIMITIVE_NAMED:0 "§H$COUNTRY$ ($AGE|Y$)§!"
  MERGE:0 "รวม"
@@ -11134,8 +11134,8 @@
  mod_country_first_league_homeworld_engineering_research_produces_add:0 "$mod_country_engineering_research_produces_mult$"
  ghost_ship:0 "Ghost Ship"
  ghost_ship_plural:0 "Ghost Ships"
- MOD_VERSION:0 "Mod v0.65.6, Update 15/05/2022"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §H*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่งแต่พอจะเล่นได้ละ§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1. เน้นแปลตัวเกมหลักและ DLC ที่ผมมี[ก่อน]§! : ( Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars )\n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.65.7, Update 20/05/2022"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*สอบถามความคิดเห็น เรื่องการเปลี่ยนชื่อเรียกเฉพาะกลับไปใช้เป็นตัวอักษรภาษาอังกฤษ\n\nแรกเริ่มเดิมที ทีมงานใช้วิธีแปลโดยใช้คำที่จำกัดความถึงสิ่งนั้นๆตามบทบาทหน้าที่เพื่อให้เข้าใจได้ง่ายจำง่าย หลักการเดียวกับการตั้งชื่อของวิเศษโดเรม่อน เช่น 'ประตูไปไหนก็ได้' ตัวอย่างดังนี้\nCitadel => ป้อมปราการอวกาศ,\nOutpost => สถานีด่านนอก,\nSentry Array => อาร์เรย์สังเกตุการณ์กาแล็กซี\nFallen Empires => จักรวรรดิเก่าแก่ทรงพลัง\nเลยอยากถามความคิดเห็นของเพื่อนๆที่เล่นม็อดตัวนี้ ว่าอยากให้เปลี่ยนกลับไปใช้ภาษาอังกฤษเหมือนเดิมดีหรือไม่ เผื่อบางทีเพื่อนๆอาจจะอยากจะไปค้นหาข้อมูลในเวป Wiki ของ Paradox เพิ่มเติมจะได้ใช้ภาษาอังกฤษค้นหาได้\n-ทางทีมงานจึงขอให้เพื่อนๆช่วยโหวตหรือแนะนำไว้ในช่อง comment ที่เว็บบอร์ดของม็อด steam workshop  https://steamcommunity.com/workshop/filedetails/discussion/2330892068/4839692156568514524/§!"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
