--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -67,6 +67,7 @@
  NO_BRANCH_OFFICE_VALUE_FORMAT:0 "$VALUE|1Y$"
  IS_CRIMINAL_SYNDICATE:0 "เป็นองค์การอาชญากรรม"
  IS_NOT_CRIMINAL_SYNDICATE:0 "ไม่เป็นองค์การอาชญากรรม"
+ BRANCH_OFFICE_ALREADY_EXISTS:1 "£trigger_no£ §RAnother Megacorp has already established a branch office here.§!"
  ESTABLISH_BRANCH_OFFICE_TITLE:0 "ตั้งสำนักงานสาขา"
  ESTABLISH_BRANCH_OFFICE_DESC:1 "การตั้ง §Yสำนักงานสาขา§! ใหม่บนดาว $PLANET|Y$ มีค่าใช้จ่ายคือ §Y$COST$§! และคาดว่าจะสร้างรายได้ต่อเดือน §Y£energy£ $VALUE|1$§! ขึ้นอยู่กับ £trade_value£§Y$TRADE_VALUE$§! ปัจจุบันของดาว นอกจากนี้มันยังเพิ่ม §Y$EMPIRE_SIZE$§! ของเราอีกด้วย"
  ESTABLISH_BRANCH_OFFICE_RANGE_MULT:0 "ระยะทาง: $VALUE|R%$"
@@ -1488,7 +1489,7 @@
  mod_monthly_trades_rare_crystals_produces_add:0 "$mod_country_rare_crystals_produces_mult$"
  mod_monthly_trades_volatile_motes_produces_add:0 "$mod_country_volatile_motes_produces_mult$"
  mod_monthly_trades_exotic_gases_produces_add:0 "$mod_country_exotic_gases_produces_mult$"
- mod_planet_bureaucrats_produces_mult:1 "£job_bureaucrat£ $job_bureaucrat_plural$ Output"
+ mod_planet_bureaucrats_produces_mult:1 "£job_bureaucrat£ ผลิตผล $job_bureaucrat_plural$"
  mod_planet_bureaucrats_produces_add:0 "$mod_planet_bureaucrats_produces_mult$"
  mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ จาก £job_bureaucrat£ $job_bureaucrat_plural$"
  mod_planet_bureaucrats_unity_produces_add:0 "$mod_planet_bureaucrats_unity_produces_mult$"
