--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -96,14 +96,14 @@
  sm_offspring_outlook:0 "Offspring Outlook"
  sm_offspring_outlook_desc:0 "A starbase module allowing an Offspring to oversee and administrate ongoing battles within the system.\n"
  STARBASE_OFFSPRING_OUTLOOK:0 "$sm_offspring_outlook$"
- mod_shipsize_offspring_corvette_build_speed_mult: "Offspring $mod_shipsize_corvette_build_speed_mult$"
- mod_shipsize_offspring_destroyer_build_speed_mult: "Offspring $mod_shipsize_destroyer_build_speed_mult$"
- mod_shipsize_offspring_cruiser_build_speed_mult: "Offspring $mod_shipsize_cruiser_build_speed_mult$"
- mod_shipsize_offspring_battleship_build_speed_mult: "Offspring $mod_shipsize_battleship_build_speed_mult$"
- mod_shipsize_offspring_corvette_hull_add: "Offspring $mod_shipsize_corvette_hull_add$"
- mod_shipsize_offspring_destroyer_hull_add: "Offspring $mod_shipsize_destroyer_hull_add$"
- mod_shipsize_offspring_cruiser_hull_add: "Offspring $mod_shipsize_cruiser_hull_add$"
- mod_shipsize_offspring_battleship_hull_add: "Offspring $mod_shipsize_battleship_hull_add$"
+ mod_shipsize_offspring_corvette_build_speed_mult: "ผล $mod_shipsize_corvette_build_speed_mult$"
+ mod_shipsize_offspring_destroyer_build_speed_mult: "ผล $mod_shipsize_destroyer_build_speed_mult$"
+ mod_shipsize_offspring_cruiser_build_speed_mult: "ผล $mod_shipsize_cruiser_build_speed_mult$"
+ mod_shipsize_offspring_battleship_build_speed_mult: "ผล $mod_shipsize_battleship_build_speed_mult$"
+ mod_shipsize_offspring_corvette_hull_add: "ผล $mod_shipsize_corvette_hull_add$"
+ mod_shipsize_offspring_destroyer_hull_add: "ผล $mod_shipsize_destroyer_hull_add$"
+ mod_shipsize_offspring_cruiser_hull_add: "ผล $mod_shipsize_cruiser_hull_add$"
+ mod_shipsize_offspring_battleship_hull_add: "ผล $mod_shipsize_battleship_hull_add$"
  origin_subterranean:0 "Subterranean"
  origin_subterranean_desc:0 "Whether avoiding predators or seeking easier access to resources, this species has evolved to live under the surface of their homeworld, leading to a more environmentally versatile society."
  origin_tooltip_subterranean_effects:1 "- Start with the §YCave Dweller§! trait\n- Your species constructs cities underground, leading to a §R+10%§! increase in Building and District costs, and §R-10%§! build speed\n- Colonies suffer §G-75%§! damage from orbital bombardment\n- §HMining Districts§! are uncapped, add §G+2§! £housing£ §Y$MOD_PLANET_HOUSING_ADD$§! and every §Y3§! §HMining Districts§! grant §G1§! £building£ §YBuilding Slot§! each"
