--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -30,7 +30,7 @@
  quantum_catapult_2_DESC:1 "Twin arrays of torsion lenses are placed diametrically opposite each other in order to improve the channeling of stellar flux as a means of transportation."
  quantum_catapult_3:0 "$quantum_catapult_1$"
  quantum_catapult_3_DESC:1 "A linked cage of torsion lenses around the star ensures optimal throughput from the energy being captured to its release as a means of interstellar transportation."
- quantum_catapult_ruined:0 "Ruined $quantum_catapult_1$"
+ quantum_catapult_ruined:0 "$quantum_catapult_1$ (พังเสียหาย)"
  quantum_catapult_ruined_DESC:1 "This arrangement of vast lenses was designed to focus energy from the star it encompasses. Such an energy source would be powerful enough to launch ships across interstellar space - if only the array weren't so misaligned, and in clear need of repair."
  quantum_catapult_ruined_MEGASTRUCTURE_DETAILS:1 ""
  quantum_catapult_restored:0 "$quantum_catapult_1$"
@@ -61,21 +61,21 @@
  hyper_relay_plural:0 "Hyper Relays"
  hyper_relay_DESC:1 "Though useless on its own, a chain of Hyper Relays allows fast travel between adjacent systems."
  hyper_relay_MEGASTRUCTURE_DETAILS:1 "Though useless on its own, a §Ychain of Hyper Relays§! allows significantly faster transit times between adjacent systems."
- hyper_relay_ruined:0 "Ruined Hyper Relay"
+ hyper_relay_ruined:0 "Hyper Relay (พังเสียหาย)"
  hyper_relay_ruined_DESC:0 "This ruined structure was once part of a chain of Hyper Relays allowing fast travel along its route."
  hyper_relay_ruined_MEGASTRUCTURE_DETAILS:0 "$hyper_relay_MEGASTRUCTURE_DETAILS$"
  hyper_relay_restored:0 "$hyper_relay$"
  hyper_relay_restored_DESC:0 "$hyper_relay_DESC$"
  tech_hyper_relays:0 "Hyper Relays"
  tech_hyper_relays_desc:0 "§YHyper Relays§! form a chain of structures built outside the gravity well of systems, allowing fast travel from relay to relay rather than requiring transit to established hyperlane entrances."
- feature_hyper_relay_construction:0 "Hyper Relay Construction"
+ feature_hyper_relay_construction:0 "การก่อสร้าง Hyper Relay"
  feature_hyper_relay_construction_desc:0 "Constructs a §YHyper Relay§! outside of the gravity well of a system. $hyper_relay_DESC$"
  requires_no_existing_hyper_relay:0 "$TRIGGER_FAIL$Cannot build due to existing $hyper_relay$."
  requires_colonized_planet_orbital_ring:0 "$TRIGGER_FAIL$Cannot build in orbit of planets that are neither colonized nor fully under your control."
  orbital_ring:0 "Orbital Ring"
  orbital_ring_DESC:0 "$orbital_ring_tier_1_DESC$"
  orbital_ring_MEGASTRUCTURE_DETAILS:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
- orbital_ring_ruined:0 "Ruined Orbital Ring"
+ orbital_ring_ruined:0 "Orbital Ring (พังเสียหาย)"
  orbital_ring_ruined_DESC:0 "This ring once encircled the planet, providing various defensive and infrastructural advantages. Damage and age have left it structurally unsound, and it's a bit of a miracle that any of it remains at all."
  orbital_ring_ruined_MEGASTRUCTURE_DETAILS:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
  orbital_ring_restored:0 "$orbital_ring$"
