--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -203,10 +203,10 @@
  subject_holdings_limit_4_desc:1 "The Overlord can have 4 Holdings in total across the Subject's planets."
  subject_diplomacy:0 "Diplomatic Freedom"
  subject_diplomacy_desc:1 "This Term dictates how much diplomatic freedom is given to the Subject, and whether they are allowed to vote freely from their Overlord."
- subject_can_do_diplomacy:0 "Independent Diplomacy"
- subject_can_do_diplomacy_desc:0 "The Subject is free to engage in diplomacy with other Empires and vote independently."
+ subject_can_do_diplomacy:1 "Independent Diplomacy"
+ subject_can_do_diplomacy_desc:1 "The Subject is free to engage in most diplomacy with other Empires and vote independently."
  subject_can_do_diplomacy_but_not_vote:0 "Restricted Voting"
- subject_can_do_diplomacy_but_not_vote_desc:1 "The Subject is free to engage in diplomacy, but must follow their Overlord's votes in Federations and the Galactic Community.\n\nThis will force the Subject to join any §YFederation§! that the Overlord is a member of.\n\nIf the Overlord is a member of the §YGalactic Community§!, the Subject will be forced to join it."
+ subject_can_do_diplomacy_but_not_vote_desc:2 "The Subject is free to engage in most diplomacy, but must follow their Overlord's votes in Federations and the Galactic Community.\n\nThis will force the Subject to join any §YFederation§! that the Overlord is a member of.\n\nIf the Overlord is a member of the §YGalactic Community§!, the Subject will be forced to join it."
  subject_can_not_do_diplomacy:1 "Limited Diplomacy"
  subject_can_not_do_diplomacy_desc:0 "The Subject may not engage in diplomacy with other Empires, nor vote independently."
  subject_expand:0 "Expansion"
