--- a/mod/thmod/localisation/english/events_6_l_english.yml
+++ b/mod/thmod/localisation/english/events_6_l_english.yml
@@ -703,6 +703,7 @@
  colony.9080.desc:0 "After a grueling campaign, the crystalline entity dwelling at the heart of a planet has finally been defeated. The final battle took place deep underground, in the cave housing the core of the crystal behemoth, and only after we managed to shatter it did the beast stop fighting. Its various appendages disintegrated, losing cohesion at a molecular level and sprinkling crystal dust across the planet. The innumerable tunnels left in the wake of crystal tentacles are going to help us a lot in our efforts to mine the exceptionnally rich minerals composing this world. As for the origin of the entity itself, we are left with many questions, but we might have just gained some insight on the way that spacefaring crystalline entities are created."
  colony.9080.a:0 "Victory at last."
  d_crystal_kraken_body:0 "Crystalline Remains"
+ d_crystal_kraken_body_bombed:1 "Shattered Crystalline Remains"
  colony.9085.name:0 "Unusual Happenings"
  colony.9085.desc:0 "Our mining operations on [Root.GetName] have encountered unexpected difficulties. Ranging from mild tremors to shifting crystal veins, something is going on. Despite all our experience in tunnneling, we have no idea what it is. These circumstances make it hard to work in secure conditions, and we have already lost gear, lives and ore in unpredictable accidents and collapses. Perhaps it would be best to halt mining operations under a certain depth?"
  colony.9085.a:0 "It's probably nothing."
